--- a/src/site/notes/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/灵感收集","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
 
@@ -641,7 +641,7 @@
 
 “天呐，提姆，你现在听起来真的很像布鲁斯。”夜翼苦笑。
 
-红罗宾沉默几秒，并没有在这个话题上继续下去：“无论如何我们需要尽可能多的英雄站在我们这一边。这一联盟并不好对付，而超人更是其中最麻烦的一个——我们还需要更多的帮助，所有的，只要能够帮助我们对付正义联盟的，任何人都可以。”
+红罗宾沉默几秒，并没有在这个话题上继续下去：“无论如何我们需要尽可能多的英雄站在我们这一边。正义联盟并不好对付，而超人更是其中最麻烦的一个——我们还需要更多的帮助，所有的，只要能够帮助我们对付正义联盟的，任何人都可以。”
 
 夜翼眉毛一跳：“你的意思是……”
 
@@ -683,7 +683,7 @@
 
 他把话题拉回正轨：“无论如何，海滨城一事后联盟在舆论管控方面的工作量至少翻了四倍，哈尔。”
 
-“还有这东西？我以为你们已经玩腻英雄游戏了。”哈尔挑眉。
+“还有这东西？我以为你们已经玩腻英雄游戏了。”绿灯挑眉。
 
 “考虑到我们中唯一一个给人打工的人是你，你应该是最没资格说这话的。”
 
@@ -867,7 +867,7 @@
 
 于是，在几个月后的某一天，在正义联盟的月例会结束之后，沙赞提出了一个问题。
 
-“我在想，”他天真烂漫的、漫不经心的、随意的抛出了这个问题，“如果正义联盟突然开始随机无差别杀人，在被发现之前我们能杀死多少人”
+“我在想，”他天真烂漫的、漫不经心的、随意的抛出了这个问题，“如果正义联盟突然开始随机无差别杀人，在被发现之前我们能杀死多少人？”
 
 瞭望塔上为之一静，除了岿然不动的蝙蝠侠和去宇宙执行任务的绿灯侠之外，联盟剩下的四个人开始互相递眼色。沙赞很有耐心的等待着，直到其他人终于结束了那意义不明的眼神交谈，所有的视线都集中到蝙蝠侠一人身上时，蝙蝠侠微笑了起来。
 
