--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
 
@@ -1111,7 +1111,7 @@ ds将本篇分级定为18+，我觉得没那么夸张，但16+是有的，因为
 
 迪克默不作声的点点头。
 
-“真不愧是‘最像蝙蝠侠的罗宾’，”杰森讽刺的声音消失在夜晚的风里，“以防万一我提醒你一下，提姆·德雷克才是真正被韦恩和莱克斯共同认可的继承人，他才是最像他们的人——别忘了这一点。”
+“真不愧是‘最像蝙蝠侠的罗宾’，”杰森讽刺的声音消失在夜晚的风里，“以防万一我提醒你一下，提姆·德雷克才是真正被韦恩和卢瑟共同认可的继承人，他才是最像他们的人——别忘了这一点。”
 
 ——莱克斯·卢瑟。迪克在心里叹了口气。
 
@@ -1223,7 +1223,7 @@ ds将本篇分级定为18+，我觉得没那么夸张，但16+是有的，因为
 
 “自毁倒计时还剩三十秒。”莱克斯适时的提示。
 
-这下来不及多问了。正义联盟赶紧卡着点把人捞走，这破费了一番功夫——被囚禁十年的克拉克显然不愿意见光，反抗的异常激烈，所以正义联盟几乎是卡着点把克拉克捞出来的。超人所见到的最后景象是两人在坍塌的废墟中拥吻，然后烟尘淹没了一切。
+这下来不及多问了。正义联盟赶紧卡着点把人捞走，这费了一番功夫——被囚禁十年的克拉克显然不愿意见光，反抗的异常激烈，所以正义联盟几乎是卡着点把克拉克捞出来的。超人所见到的最后景象是两人在坍塌的废墟中拥吻，然后烟尘淹没了一切。
 
 迪克怔怔的看着整体坍塌的庄园，低声呢喃：“……所以，结束了。就这么简单。”
 
