--- a/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质.md
@@ -1,18 +1,19 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
-1. 我想写个正义联盟的规则怪谈，核心思想是正义联盟的成员都是异常实体但对人无害甚至很友善，而瞭望塔是他们的巢穴，但需要参观者遵循一定的规则要不然可能会死的很惨（不是联盟成员们故意的，是他们的真实身份本来就是某种很容易弄死人类的实体，他们很友善了但确实是有生理限制），名字的话要不就叫《瞭望塔参观须知》……
-2. 嗯，我想想，超人本质是一颗燃烧的恒星，蝙蝠的话是一个不可名状的扭曲阴影，女侠是真言之力，哈尔是绿光，闪电侠是神速力，海王是水的化身，火星猎人是一种只有思维存在的模因这样子。
-3. 嗯，这本手册在设定上来说应该是某个异常收容组织写出来的，正义联盟主动配合了他们的收容，但要求就是他们不能干涉正义联盟的日常英雄行径，而这个组织也答应了，毕竟这帮实体虽然挺吓人的但一直在努力帮忙收容其他实体，也是个好盟友。然后游客去瞭望塔参观属于收容的一环，因为正义联盟很喜欢和人类接触，也很喜欢人类在它们的巢穴（瞭望塔）参观，所以让游客去瞭望塔属于稳定正义联盟情绪的收容措施的一部分，然后游客对于这些真相是一无所知的，他们眼中的正义联盟就是普通版本的正义联盟，收容组织也不能把真相透露给游客们，只能把应该做什么和不该做什么整理成手册，万一遇上灵性特别高的游客他们至少不会直接死那……
-4. （顺带一提如果有人死瞭望塔了的话正义联盟会很伤心的）
-5. 收容组织名叫utn理事会，是一个依靠研究异常而不断发展到存在于所有时间所有空间的终点的一个组织，也是整个世界观的实际管理者，主要负责给无穷无尽的世界线处理突发异常情况，算是个覆盖整个虚空的紧急救援组织，utn的意思是“understand，transform，neutralize”，“理解、转化、规范”，致力于收容并解决异常所带来的各类混乱，并且他们积极寻求将异常现象融入或改造成可以造福文明社会的形态。“UTN坚信，任何看似超乎寻常的存在都有其内在规律可循，通过不懈的努力与探究，终能为文明带来福祉与和平。”
-6. 其本体存在于一个更高的纬度上，在这个地球的是个分部。本来他们是没有分部这个行为的，这种异常实体会被他们直接带回总部收容，但这个宇宙的正义联盟确实很爱地球，在发现自己对地球的危险性之后他们直接找到了理事会拜托理事会帮个忙，理事会表示卧槽还有这种设定的正义联盟（他们之前已经接触过很多版本的正联了），不过总之还是很乐意的就过来帮忙了。
-7. 总体介绍
-	1. 根据我们的观察，这帮人应该是一群外神，英雄代号是他们的称号或者说神名，至于说他们的真名……根据K事件的结果，我们决定再也不打听这件事了。
-		1. 以及，我们高度怀疑“哈尔·乔丹”就是绿灯侠的真名，但我们不知道我们也不敢问……
-	2. 他们的人类身份其实类似于“哥们我借用一下你的身体”。克拉克·肯特、布鲁斯·韦恩、戴安娜·普林斯等都是真实存在的普通人类（但哈尔·乔丹不是），这帮外神们每次去地球的时候都是借用他们的身体的，什么降临派（不是）。
-8. 人物介绍
+
+1. 正义联盟的规则怪谈，核心思想是正义联盟的成员都是异常实体但对人无害甚至很友善，而瞭望塔是他们的巢穴，但需要参观者遵循一定的规则要不然可能会死的很惨（不是联盟成员们故意的，是他们的真实身份本来就是某种很容易弄死人类的实体，他们很友善了但确实是有生理限制），名字的话要不就叫《瞭望塔参观须知》……
+2. 超人本质是一颗燃烧的恒星，蝙蝠的话是一个不可名状的扭曲阴影，女侠是真言之力，哈尔是绿光，闪电侠是神速力，海王是水的化身，火星猎人是一种只有思维存在的模因这样子。
+3. 这本手册在设定上来说应该是某个异常收容组织写出来的，正义联盟主动配合了他们的收容，但要求就是他们不能干涉正义联盟的日常英雄行径，而这个组织也答应了，毕竟这帮实体虽然挺吓人的但一直在努力帮忙收容其他实体，也是个好盟友。然后游客去瞭望塔参观属于收容的一环，因为正义联盟很喜欢和人类接触，也很喜欢人类在它们的巢穴（瞭望塔）参观，所以让游客去瞭望塔属于稳定正义联盟情绪的收容措施的一部分，然后游客对于这些真相是一无所知的，他们眼中的正义联盟就是普通版本的正义联盟，收容组织也不能把真相透露给游客们，只能把应该做什么和不该做什么整理成手册，万一遇上灵性特别高的游客他们至少不会直接死那……
+4. 顺带一提如果有人死瞭望塔了的话正义联盟会很伤心的。
+5. 收容组织名叫utn理事会，是一个依靠研究异常而不断发展到存在于所有时间所有空间的终点的一个组织，也是整个世界观的实际管理者，主要负责给无穷无尽的世界线处理突发异常情况，算是个覆盖整个虚空的紧急救援组织，utn的意思是“understand，transform，neutralize”，“理解、转化、规范”，致力于收容并解决异常所带来的各类混乱，并且他们积极寻求将异常现象融入或改造成可以造福文明社会的形态。“理事会坚信：任何看似超乎寻常的存在都有其内在规律可循，通过不懈的努力与探究，终能为文明带来福祉与和平。”
+6. 理事会本体存在于一个更高的纬度上，在这个地球的是个分部。本来他们是没有分部这个行为的，这种异常实体会被他们直接带回总部收容，但这个宇宙的正义联盟确实很爱地球，在发现自己对地球的危险性之后他们直接找到了理事会拜托理事会帮个忙，理事会表示卧槽还有这种设定的正义联盟（他们之前已经接触过很多版本的正联了），不过总之还是很乐意的就过来帮忙了。
+7. 总体介绍（由理事会记录）
+	1. 根据我们的观察，正义联盟的成员应该是一群外神，英雄代号是他们的称号或者说神名，至于说他们的真名……出于保护个神隐私的目的，在此不便透露。
+	2. 是的，他们有人类身份，同样出于保护个神隐私的目的，在此不便透露。
+	3. 联盟成员目前是7+1的状态，超人、蝙蝠侠、神奇女侠、绿灯侠、闪电侠、海王、火星猎人和夜翼。
+8. 能力档案。
 	1. 超人
 		1. 一颗处于稳定主序星阶段的恒星。
 		2. 太阳还有什么好说的，太阳就是太阳……
@@ -34,10 +35,11 @@
 		3. 当情绪激动、意志高度集中或能量过载时，会辐射出各种不同颜色的光，其所引发的强烈心智动荡会导致智慧生物的认知解体导致其人格湮灭，并随后被物理同化成为能量体的一部分。
 		4. 其能量具现化过程会轻微扭曲局部现实法则，是的，绿灯造物都是真的，绿灯甜甜圈可以吃但不建议任何除了闪电侠之外的生物摄入，这tm是个生活在唯物世界里的唯心生物，幸好他唯心的部分还必须要借助光来进行……
 	5. 闪电侠
-		1. 当其在高速运动状态时，靠近且与其发生相对位移的生物体皆会因无法承受其携带的时空剪切力而瞬间解离为基本粒子，但好消息是这个范围很小，只到他体表外二十厘米。
-		2. 其高速移动会在局部制造短暂的时间流混乱。靠近其路径可能经历时间感知错乱（几秒感觉像几小时或反之）、看到短暂的时间残影（可能来自过去或可能的未来），甚至被意外卷入时间涡流，导致部分或全部身体组织时间线错乱。
-		3. 理论上，其速度上限突破可能导致局部物理真空失稳，虽然目前尚未观测到。爱因斯坦在坟墓里翻滚.jpg
-		4. “闪电”是时空摩擦产生的能量释放，接触结果参见第一条。
+		1. 神速力的物理化身。
+		2. 当其在高速运动状态时，靠近且与其发生相对位移的生物体皆会因无法承受其携带的时空剪切力而瞬间解离为基本粒子，但好消息是这个范围很小，只到他体表外二十厘米。
+		3. 其高速移动会在局部制造短暂的时间流混乱。靠近其路径可能经历时间感知错乱（几秒感觉像几小时或反之）、看到短暂的时间残影（可能来自过去或可能的未来），甚至被意外卷入时间涡流，导致部分或全部身体组织时间线错乱。
+		4. 理论上，其速度上限突破可能导致局部物理真空失稳，虽然目前尚未观测到。爱因斯坦在坟墓里翻滚.jpg
+		5. “闪电”是时空摩擦产生的能量释放，接触结果参见第一条。
 	6. 海王
 		1. 水体（海洋、河流、地下水甚至生物体内水分）的集体意识与物理化身，目前看来只要是水就能控制，距离疑似是无限的。
 		2. 海王（×）水元素领主（✓）
@@ -51,3 +53,12 @@
 		3. 与其进行任何接触都可能导致其思维像病毒一样感染接触者的意识，表现为被影响者的认知产生严重混乱乃至被其同化，成为其思维的一部分。
 		4. 大部分情况下会维持一个稳定的物理形态，但其物理形态完全依赖于集体认知和自身专注力。当情绪出现激烈波动时其物理形态可能崩溃，直视此过程会导致观察者思维崩溃现象。
 		5. 其存在本身可能导致附近电子设备故障或信号紊乱，相对来说是个非常无害的现象。
+	8. 夜翼
+		1. 很难描述他是个什么东西，因为夜翼是蝙蝠侠和超人的“子嗣”，至少正义联盟的内部如此认知。虽然我很不理解为什么超人和蝙蝠侠力量失控融合之后的产物会被他们认作子嗣，但这个孩子目前确实是瞭望塔的新成员。
+		2. 表观上来说，夜翼是“一团非常明亮的阴影”，这句子哪怕加上八行注释他也是个病句，但确实如此。当你注视这个孩子的时候，这个认知就会自然而然的浮现在你的脑海里。
+		3. 考虑到已经有两位同事因为试图去思考“这到底是个什么玩意儿”导致大脑熟了，我不建议任何人再去思考夜翼到底是个什么玩意儿。（且由于记忆未及时上传，以这两位的探索精神我估计他们过段时间还得被烧一次。）
+		4. 夜翼继承了蝙蝠侠和超人的力量，但有微妙的不同。他的能力上没有任何认知方面的危害（思考他的存在本质这一条不论的话）。
+		5. 他可以化身阴影神出鬼没（一般用来吓唬人）或者变成一颗功率更低的太阳（但对于人类来说直观感受没什么区别，都是瞬间气化，致敬我那富有探索精神的同事），或者这两件事同时发生。
+		6. 他没有空间方面的能力，但从来没在瞭望塔上迷过路；他所化身的阴影也会把人吞进去，但似乎没有同化的能力，这让他看起来更加无害，虽然夜翼觉得这很好玩所以会主动吞人。
+		7. 蝙蝠侠说这是因为他“还在幼年期”，喜欢吞人是在练习能力，不过目前确实无害；超人补充说等他再大一些的时候蝙蝠侠就会教他控制他的能力了，到时候得把这些习惯都改过来才行。
+		8. ……外神子嗣真可怕。
