--- a/src/site/notes/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2/","tags":["创作/10_其他/乙女向/是","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 顾名思义的泡蝙蝠，刚出道没多久的年轻蝙蝠，第二人称乙女文——从我的定义来说是乙女文，至于说你们代不代、磕不磕、能不能代或者能不能磕那反正我是不管的，我只负责写，你们想干嘛干嘛吧……
 
@@ -852,7 +853,7 @@
 
 顺带一提虽然百特曼出场很有压迫感，但我脑子里的场景完全就是：
 
-![lofter_1736986711305.jpg](/img/user/00%20%E8%8D%89%E7%A8%BF%E7%AE%B1/%E9%99%84%E4%BB%B6/lofter_1736986711305.jpg)
+![猫猫蝙蝠.jpg](/img/user/00%20%E8%8D%89%E7%A8%BF%E7%AE%B1/%E9%99%84%E4%BB%B6/%E7%8C%AB%E7%8C%AB%E8%9D%99%E8%9D%A0.jpg)
 
 嘿嘿可爱的大猫猫！
 
@@ -926,7 +927,7 @@
 
 布鲁斯仿佛突然被什么激怒了一样（嗯，绝对不是阿尔弗雷德那种看热闹的表情），但他还是保持着表面上的镇定，只是声音带着轻微的颤抖：“那我能怎么做？看着她在巷子里被两个混混……”
 
-“您分明知道索恩医生的……嗯，战斗力，这些都在资料里写着，两个喝多了又没有枪支的男人伤不到他，”阿尔弗雷德打断了布鲁斯的话语以及他的怒意，并且让他陷入了一种更深的凝滞之中，“或者，您本来有更好的出场方式，更自然一些的。”
+“您分明知道索恩医生的……战斗力，这些都在资料里写着，两个喝多了又没有枪支的男人伤不到他，”阿尔弗雷德打断了布鲁斯的话语以及他的怒意，并且让他陷入了一种更深的凝滞之中，“或者，您本来有更好的出场方式，更自然一些的。”
 
 是的，他有，布鲁斯想，但一个更自然的出场方式就意味着要延长他到达现场的时间。
 
@@ -956,18 +957,20 @@
 
 🦇🦇🦇(◣_◢)🦇🦇🦇
 
-说两件跟本文无关但挺乐的事——我在翻超女的起源刊的时候发现了两件事，一个是dc自己的官网上都没有自家漫画全本，动作漫画100-300之间却了很多，不过也可能是我没翻到，以及官网需要挂个梯子才能注册这事确实比较抽象；一个是超女最初给自己取的名字是“Linda Lee”，然后问大超这名字怎么样。
+说两件跟本文无关但挺乐的事——我在翻超女的起源刊的时候发现了两件事，一个是dc自己的官网上都没有自家漫画全本，动作漫画100-300之间缺了很多，不过也可能是我没翻到，以及官网需要挂个梯子才能注册这事确实比较抽象；一个是超女最初给自己取的名字是“Linda Lee”，然后问大超这名字怎么样。
 
 大超（表面）：这名字很好！（as good as any!）
 
-大超os：LANA LANG WAS MY GIRL FRIEND WHEN I WAS SUPERBOY, AND LOIS LANE REPLACED HER WHEN I BECAME SUPERMAN! BY SHEER COINCIDENCE, SHE PICKED THE SAME INITIALS…L.L! （Lana Lang是我还是超级小子时的女朋友，当我成为超人时，Lois Lane取代了她！纯属巧合，她选择了相同的首字母......L.L！）
+大超（os）：LANA LANG WAS MY GIRL FRIEND WHEN I WAS SUPERBOY, AND LOIS LANE REPLACED HER WHEN I BECAME SUPERMAN! BY SHEER COINCIDENCE, SHE PICKED THE SAME INITIALS…L.L! （Lana Lang是我还是超级小子时的女朋友，当我成为超人时，Lois Lane取代了她！纯属巧合，她选择了相同的首字母......L.L！）
 
 原来这个槽大超自己就吐过啊🤣
 
 以及大超你数少啦，还有个莱克斯·卢瑟呢！
 
-大超：？
+大超：……？
 
 ## Chapter 10
 
 当然了，这件事远没有表面上那么简单。
+
+在外人眼中，布鲁斯·韦恩
