--- a/src/site/notes/02 小说/03 dc/02 进行中/【超蝙】人间之……？.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【超蝙】人间之……？.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【超蝙】人间之……？/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【超蝙】人间之……？/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
 
@@ -77,7 +77,7 @@
 
 绿灯的光芒在监控屏幕上暴涨，真言套索的金光在外空明灭闪烁。通讯器中传来哈尔有点失真的声音：“还没联系到酥皮吗？”
 
-“蝙蝠洞和孤独堡垒都没有回消息，露易丝说克拉克肯特请了长假。”维克多回复，“你们那边情况如何？”
+“蝙蝠洞和孤独堡垒都没有回消息，露易丝说克拉克·肯特请了长假。”维克多回复，“你们那边情况如何？”
 
 “还撑得住。”荣恩的声音传来，“但如果超人再不来……”
 
@@ -97,7 +97,7 @@
 
 “这不是重点。”哈尔心情很好的打断了维克多的嘀咕，“嘿童子军你终于来你要干什么？！”
 
-招呼打到一半就变成了惊呼，而且不只是哈尔，就连女侠都发出了一声压抑的惊呼。瞭望塔的光学监控镜头并没有捕捉到超人的动作，但是它捕捉到了超人动作的结果——布莱尼亚克的飞船如同烟花一般炸开，他所收集的那些平中城散落一地，却很微妙的没有受到任何损害。红蓝色的身影如同鬼魅一般出现在了飞船残骸的背后，手里拿着一个看起来有人头大小的金属圆球。
+招呼打到一半就变成了惊呼，而且不只是哈尔，就连女侠都发出了一声压抑的惊呼。瞭望塔的光学监控镜头并没有捕捉到超人的动作，但是它捕捉到了超人动作的结果——布莱尼亚克的飞船如同烟花一般炸开，他所收集的那些瓶中城散落一地，却很微妙的没有受到任何损害。红蓝色的身影如同鬼魅一般出现在了飞船残骸的背后，手里拿着一个看起来有人头大小的金属圆球。
 
 然后，超人双手一合，那个金属圆球就被他直接压成了粉末。
 
@@ -965,7 +965,7 @@
 
 “关于超人的那些？现在社交媒体已经炸了。”比利道，“超人看起来都快变成新神了。”
 
-于是钢骨开始处理那些对超人过度崇拜的言论，但是戴安娜却一直一言不发。几分钟后，公主突然说了一句：“不仅要处理掉那些过度崇拜超人的言论，也要处理掉那些对蝙蝠侠不利里的言论。”
+于是钢骨开始处理那些对超人过度崇拜的言论，但是戴安娜却一直一言不发。几分钟后，公主突然说了一句：“不仅要处理掉那些过度崇拜超人的言论，也要处理掉那些对蝙蝠侠不利的言论。”
 
 维克多疑惑抬头：“？”
 
@@ -1109,7 +1109,7 @@
 
 总统接过那沓文件。
 
-“请相信我，公主，”雅各布·卡特如是说，“超人是人类共同的朋友。我们或许各自有各自的利益、立场、分歧、信念……但唯独在超人的事情上，我相信我们都秉持着一个共同的信念。”
+“请相信我，公主，”雅各布·卡特总统如是说，“超人是人类共同的朋友。我们或许各自有各自的利益、立场、分歧、信念……但唯独在超人的事情上，我相信我们都秉持着一个共同的观点。”
 
 “人类不会放弃超人的，再艰难也不会。”
 
@@ -1159,4 +1159,382 @@
 
 这次的讨论始于“为什么迪克提姆康纳都受到了影响，但杰森却没有”这个问题（不过这个问题很快就被泰坦们解答了）——以及，为了未成年人的身心健康，大伙挑了个比利不在的时间点开会，其实也挺好挑的，毕竟小孩子还要写作业吗——结束于“舆论对现在的超人没有影响”。
 
-“所以我们的结论是，”
+“所以我们得出的结论是，以超人现在的状态，除了他真正在乎的那些人之外，其他人对他的影响非常有限——好消息是现在我们至少知道超人更关心谁了。”荣恩总结，“而另外一个问题是，那些他真正在乎的人会受到他的影响。”
+
+亚瑟吐了句槽：“所以我们算是克拉克不那么在乎的那部分？”
+
+“只能说是‘优先级并不特别高’的那部分。”戴安娜纠正道，“你应该知道布鲁斯对于克拉克来说意味着什么。”
+
+哈尔点点头：“我知道，‘你是如此绝望卑微地渴求他的认可，以至于摇尾乞怜到竟愿意为他一声响指便将所有的一切弃如敝履而抛之脑后。（You're so desperate for him to approve of you that you're willing to throw everything away when he snaps his fingers.）’”
+
+正义联盟：“……？”
+
+虽然听出来哈尔应该是在引用别人说的、用于评价超人和蝙蝠侠关系的某句话，但正义联盟还是直接被这句话给镇住了，最后还是极速者最先反应了过来：“……呃，哈尔？这句话……”
+
+“莱恩小姐跟酥皮说的。”哈尔说，大发慈悲的补充了背景故事，“记得上次酥皮和黑漆漆吵架的事吗？”
+
+戴安娜：“……但你为什么会知道？”
+
+“他俩在星球日报楼顶上聊的那么大声。”
+
+荣恩：“……”
+
+事实上，上一次超人和蝙蝠侠又大吵一架之后（经常的事，尽管正义联盟很多时候都不知道他俩为啥会吵的这么厉害，不过现在他们知道是因为小情侣闹矛盾了，虽然当时他俩不承认），我们可亲可敬英勇无畏的绿灯刚从宇宙回来，路过大都会的时候恰好听到了超露俩人的谈话，这真不是他故意的。当然，如果不是露易丝这句讽刺太过辛辣让他记到现在，他估计扭头就把这事给忘了。
+
+毕竟超人和蝙蝠侠经常因为一些莫名其妙的原因吵架。
+
+戴安娜深吸口气，突然更深一层的理解了蝙蝠侠在联盟里的存在意义：“还是说回正题，如果超人现在真正在乎的人少到只剩下三个，那我们要怎么让他……回心转意，考虑到任何人都可能被他所影响的话？”
+
+“克拉克毕竟是人，他的亲友圈不会只剩下三个。”亚瑟摇摇头，随后提出了一个极有建设性的方案，“让肯特夫妇见一见克拉克怎么样？”
+
+维克多摇摇头：“最好不要，这时候把他们卷进去太危险了。”
+
+戴安娜叹了口气：“而且克拉克恢复了之后如果知道自己对他们做了什么事的话肯定会很伤心的，我们得找个他不会那么内疚的人选。”
+
+“那就只能从超级英雄中间挑了，而且要能和他的力量对抗，这是关键。”巴里琢磨了一下，“因为任何人都可能被他的能力影响导致‘叛变’，所以最好找和意志力相关的英雄，还得是他比较熟悉的要不然他根本听不进去话……”
+
+巴里说到一半忽然停了下来，扭头看了一眼身边漂浮的绿色发光体，其他联盟成员也在愣了两秒之后露出了恍然大悟的神色，目光全都集中到了哈尔身上。
+
+哈尔的反应是翻了个白眼。
+
+“确实，哈尔最合适。”戴安娜点点头，“绿灯侠的力量形式和克拉克的非常接近，如果说还有谁能应付现在的克拉克，那可能就只剩下绿灯军团了。”
+
+“我知道。”哈尔说，神色认真了些，“让我去跟他们谈谈。”
+
+……
+
+不可名状的绿色怪物正在接近地球。
+
+发光的绿色灯泡已经到达了近地轨道。
+
+绿灯军团的成员已经突破了地球大气层。
+
+哈尔·乔丹先生正在美国上空飞行。
+
+有史以来最伟大的并且在平行宇宙靠意志力无视了绿灯戒指固有保险把绿灯军团给弄死了的绿灯侠驾临了他忠实的……
+
+呃，好像得去掉一个形容词。总之，哈尔降落到了韦恩庄园的花园里，第一眼就看到了正站在梧桐树荫下的提姆·德雷克。少年冰蓝色的眼睛正一眨不眨地看着他，那种莫名弥漫上来的非人感让哈尔挑了挑眉毛。
+
+“嘿，罗宾。”哈尔跟他打了个招呼，“你父亲呢？”
+
+提姆似乎是没反应过来，也可能只是愣了两秒，随后才慢吞吞的开口：“书房。”
+
+“居然不在卧室？”
+
+这句真的是哈尔下意识脱口而出的。
+
+提姆缓慢的眨了眨眼睛，不知道反应过来了没，反而从另一边传来一个轻快而明亮的声音：“他俩也不会天天都在卧室好吗？布鲁斯还是有工作要做的。”
+
+哈尔转过头，就看到了一身休闲打扮的蓝鸟正端着一杯咖啡向他走来（咖啡杯甚至是超人主题的），那双蓝的毫无杂质的眼睛里带着明媚的笑意，晴朗的简直如同……
+
+反正肯定和哥谭的天空不搭边。
+
+哈尔抬头看了一眼天色，随口提了一嘴：“今天哥谭天气不错啊，阳光明媚。”
+
+“最近哥谭的天气一直很好。”迪克笑着说，“比以前好多了，至少不在总是阴雨连绵的了。”
+
+哈尔耸耸肩：“虽然我还是觉得阴沉沉的哥谭和某只黑漆漆的蝙蝠很配。”
+
+迪克大笑起来：“布鲁斯上次也是这么说的，不过哥谭市民们似乎也更喜欢晴朗一点的天气。”
+
+哈尔：“……”
+
+“你们哥谭人……”他把剩下半句不太适合在哥谭本地人面前吐出来的槽给吃回去了，转头又看了一眼仍然站在树荫下没什么动作的少年，“提姆没事吗？我看他好像有点……恍惚”
+
+“没事，他只是有点感冒，在室外活动一下有助于他快点好起来。”迪克笑着说，亲昵的搂过哈尔的脖子把他往屋子里拽，“快进来——我都有点怀念听你们吵架了。”
+
+那双冰蓝色的眼睛被隔绝在厚重的实木大门外，红色的天鹅绒帷幔垂挂在高而窄的木制窗格旁边，微微飘动着遮蔽了一大半的天光，水晶吊灯安静的发着光，哈尔在迪克的带领下穿过铺着厚绒地毯的长廊，经过一扇又一扇重复的门扉，最终停在了某一扇之前。
+
+在迪克敲门的时候，哈尔回头看了一眼走廊：“在这地方住可真容易迷路。”
+
+“庄园特有的坏处。”迪克笑道。
+
+门打开了。
+
+布鲁斯正坐在书桌后面看文件，听到开门的声音之后便抬起了头，那双仿佛蒙着雾气的钢蓝色眼睛直直的看向访客。蓝色的鸟儿轻盈的飞向他的养父，一屁股坐在扶手椅的扶手上，换来布鲁斯一个无奈的轻笑。
+
+哈尔进屋之后先是转头看了一眼门板，随后戒指发出了细微的光芒：“我猜这门很贵。”
+
+“你赔不起。”布鲁斯说，扫了一眼哈尔手上的戒指，“有事？”
+
+“没什么大事，过来慰问一下你们俩。”哈尔说，并且毫不客气的一屁股坐到了另一张沙发椅上，整个人都陷了进去，“我猜这部分就是庄园的好处了？”
+
+“这部分肯定是。”迪克笑道。
+
+绿光无声在房间中蔓延着，布鲁斯忽然拍了拍长子的胳膊。
+
+“迪克，”他温声说，柔和地简直不像蝙蝠侠，“去告诉克拉克，有客人来了，做点饼干。”
+
+“好。”鸟儿欢快的应下，三两下就窜没影了。就在迪克出门的下一秒，一只绿色的手把书房的门给关死，随后绿光大盛。
+
+“我猜我们时间不多。”哈尔说。
+
+钢蓝色眼睛里的迷雾消散了，布鲁斯点点头：“想要救克拉克只有一个办法，就是让他重新‘相信’他是个好人，甚至还要让他重新‘相信’他并非无所不能。这很难单纯靠言语做到，我们需要借助一些其他东西，在克拉克彻底相信他无坚不摧之前。”
+
+“什么东西？”哈尔问。
+
+“能制造幻境又不会对克拉克造成伤害的东西，考虑到他对魔法的抗性，最好从魔法师方面想想办法，”布鲁斯坦言，“哪怕是在梦境里，只要他相信他并非无所不能，他的能力自然会被限制回原本的强度。”
+
+“限制回？”哈尔捕捉到了一个关键词，“你是说他现在的能力是他本来就有的？”
+
+“是的。”布鲁斯点头，“我们在宇宙中看到了……一些东西，我没法跟你描述，他们看起来就像是一种五彩斑斓的色块。那些东西并没有对我产生什么影响，但对克拉克……你也看到了。”
+
+“至于那些能力，那确实是他天生就有的。只不过这力量也是一体两面的，他之前相信他会被某些东西限制，所以他才会真的被那些东西限制，而现在……他已经相信自己能做到越来越多的事情，所以他也就真的能做到越来越多的事情了。”
+
+哈尔倒吸一口凉气：“这可真是……所以，现在他变成了个混蛋，行事作风不再跟之前一样有边界感，他的力量也就开始跟着无限制的扩大了？”
+
+布鲁斯停顿了一下：“你可以这么理解。”
+
+哈尔也没有在意这个微妙的停顿，又问：“我们还剩多少时间？”
+
+“并不多，克拉克随时可能会意识到他无所不能。”布鲁斯顿了顿，回答，“穿梭时空、起死回生、乃至篡改整个宇宙的现存的历史……只要他想，没什么是他做不到的。”
+
+“……篡改历史？”
+
+“他已经做过了。”布鲁斯说到这里，语气低沉了几分，“有一个本该死去的受害人没有死去，每一个人都很惊讶，包括他自己。”
+
+哈尔瞳孔微缩，随后又皱眉：“这意味着他的能力是有限制的？”
+
+“不，只是他现在还不相信自己能够完美无缺的篡改历史。”布鲁斯说，“看看他之前对媒体做的那些，如果他意识到他可以将整条时间线全部抹除，那么再也没有人会意识到历史曾被某个人的意志篡改。”
+
+绿光开始闪烁，时间所剩无几。
+
+“最后一个问题，”哈尔说，“你我都知道他的为人，假设历史真的能被他彻底改写，生活在一个真实的幸福世界里不好吗？”
+
+“克拉克是我最信任的人之一，哈尔，即使到了现在同样如此。但我们不能将维系宇宙的重责完全系于一人的道德，哪怕那个人是克拉克·肯特，这是对整个存在本身的不负责任，这不仅是对他个人的不公。”
+
+在屏障消失之前，哈尔听到了布鲁斯的最后一句话。
+
+“任何人，都无法，也不应成为这样的……‘神’。”
+
+意志力的屏障无声无息的碎成漫天光点，下一秒，书房门给猛然推开，蓝色的鸟儿再次轻盈的飞入室内。
+
+“布鲁斯，哈尔，来吃饼干——克拉克刚烤出来的！”
+
+🙌💍🫀🦸🏻🌇❤️🌃🦇🌕🔫🧤
+
+蝙蝠侠在联盟里的存在意义belike：我能让我们别跑题.jpg
+
+忘了出自哪里了，好像也是怼哈尔的时候冒出来的一句话，笑死🤣
+
+又及，“You're so desperate for him to approve of you that you're willing to throw everything away when he snaps his fingers.”这种句子居然真的能在官方刊里写出来，那个desperate我真的是记忆犹新，打死我也想不出来这个词能这么用，官方总能给我整出一些我意料不到的活来……
+
+而且这真的是在超露前提下露易丝吐槽大超的原话，超露前提下啊大超，你不觉得你有点过分了吗，到底谁是你对象啊！
+
+## Chapter 10
+
+今日韦恩庄园静谧如常，明媚的阳光投射在玻璃花房内，来自朋友的拜访让这座古老的庄园似乎也多了一丝生气。
+
+“你该尝尝克拉克烤的饼干。”迪克笑嘻嘻的，“很美味的。”
+
+“蓝大个还会烤饼干？我以为他只会做菜。”哈尔说，随后拿起一块饼干放进嘴里。
+
+他从里面尝出了的一些绝对不应该出现在地球上的食材的味道。
+
+哈尔不动声色的把饼干咽下去：“……行啊，酥皮，你这手艺真是不错。”
+
+克拉克一身居家常服，没戴眼镜，袖口卷到了小臂部分但还是不可避免的沾上了一些面粉。听到哈尔的评价，他腼腆的笑了笑：“你喜欢就好。”
+
+几乎一如既往。
+
+“有什么独家秘方没？”哈尔接着问，“比如特殊的氪星饼干秘方？”
+
+“只是普通的曲奇。”克拉克说，“氪星食物……嗯，有些不太适合地球人。”
+
+“总之赶紧把配方交出来。”
+
+“你这是在抢劫啊哈尔。”
+
+“巴里肯定会喜欢，你舍得让他吃不到吗？”
+
+“emmmm……”
+
+总之还是要到了食谱。
+
+收好食谱之后，哈尔又拿起一块饼干，紧接着好像突然想起来了什么似的，问到：“康纳最近怎么样？”
+
+“他在孤独堡垒。”回答这个问题的是迪克，青年语气平淡，似乎只是在随口说一件很正常的小事，一边说着又从盘子里捞走一块饼干，“他最近……嗯，有点不太舒服。”
+
+哈尔在心里叹了口气。
+
+一个半氪星人能在地球上生病，这个世界真TM魔幻。
+
+他看了一眼布鲁斯，并不意外地发现黑暗骑士捏着饼干的指节微微泛白，显然是在极力克制什么。
+
+于是哈尔耸耸肩，随意道：“又是卢瑟？要我说你们下次遇到氪石还是找联盟帮个忙吧。”
+
+“不是卢瑟。”克拉克摇摇头，神色温和地又把饼干盘子往迪克那边推了一下，“厨房还有——只是孩子们太累了，最近需要休息。”
+
+哈尔短暂地沉默了一下，随后点点头，语气一如既往的随意：“孩子们有的时候是需要多休息一下。”
+
+“有时候我会觉得凯尔他们也太紧张，更别提泰坦们。”迪克说，“我真希望他们能……”
+
+布鲁斯在迪克之前拿走了盘子里的最后一块饼干，克拉克笑出了声。
+
+迪克：“……”
+
+哈尔嘴角一抽，随后翻了个白眼：“既然我们亲爱的顾问这么喜欢饼干，看起来我们下次应该在瞭望塔也准备一些。”
+
+克拉克想想也是，点头：“下次我会做一些带过去的。”
+
+“我猜荣恩也会喜欢。”哈尔说，“毕竟他很喜欢奥利奥。”
+
+不管火星猎人会对这种饼干有什么看法，至少迪克看起来真的非常喜欢超人的饼干。他起身去厨房又端了一盘出来放到桌上，然后把自己塞的鼓鼓囊囊跟一只仓鼠一样，连话都有些含混不清：“要我说的话，提姆和康纳还是太紧张了。”
+
+“吃东西的时候不要说话。”布鲁斯给了长子一个脑瓜崩，然后又扭头教训超人，“你也是，别太惯着他了。”
+
+克拉克嘿嘿一笑：“我以为你已经习惯了。”
+
+布鲁斯叹了口气，无奈道：“包括你帮他写作业的那部分？显然不。这很大程度上解释了为什么迪克特别喜欢你。”
+
+哈尔惊了：“……你还帮他写过作业？！”
+
+“很多年前的事情了。”说起这件事儿，克拉克的谈性显然很高，“那会儿迪克还在上中学……”
+
+下午茶时光在一种平静温暖而祥和的氛围中结束了，哈尔离开的时候，除了带走了饼干的配方，还带走了一盘子的饼干。而在瞭望塔，正义联盟的其他成员已经等待多时。
+
+“哈尔，你……你带了什么回来？”本来想问正事的戴安娜画风一转，看上了哈尔手里拎着的纸袋。
+
+“饼干和饼干的配方。”哈尔说，“都先来尝尝。”
+
+既然哈尔都这么说了，大伙也都各自尝了一块，随后都露出了有些惊讶的神色。但哈尔却掠过了所有人，径直看向火星人：“好吃吗？尝起来像奥利奥吗？”
+
+荣恩点点头，随后又摇摇头，问：“你想说什么？”
+
+哈尔叹了口气：“测试一下克拉克能力的边界。”
+
+在解答火星猎人的疑惑之前，哈尔先分享了一下他和布鲁斯之间的交流。
+
+“聊完之后，我又多留了一会儿，吃完饼干之后才走的。”哈尔说，“我想告诉你们的是，我从这个饼干里面尝出了一些绝对不应该出现在地球上的食材的味道。”
+
+巴里：“有吗？我觉得只是普通的曲奇，不过确实很美味。”
+
+戴安娜敏锐的察觉到了什么：“这是克拉克做的饼干？”
+
+哈尔点头。
+
+“好吧，这解释了很多事情，比如为什么我也在里面吃出了天堂岛的特产。”戴安娜叹气，“我猜这个饼干的味道会根据食用者的偏好而变化，但核心内容就是它一定符合使用者的口味——奥利奥的部分又是为什么？”
+
+“因为我在临走的时候说了一句‘我猜荣恩也会喜欢，毕竟他很喜欢奥利奥’。”哈尔说，“现在看来荣恩并不觉得它和奥利奥是同一种味道。”
+
+“他们在外形上的差异很大。”荣恩说。
+
+确实，不管怎么看，克拉克做的都只是普通的小麦曲奇，跟奥利奥从外表上是完全不沾边的。
+
+“所以我才说测试一下克拉克能力的边界，这至少证明了一件事情，就是他的认知本身还是依托于客观世界的。”哈尔说，“在他的认知里，他做的是曲奇，所以他当然也就不会认为这个东西的味道应该相当于奥利奥。”
+
+“他的能力还没有到可以随意扭曲现实的程度？”
+
+“他暂时还没法说服自己他可以这么做。”哈尔说。
+
+毫无疑问，相对于他们此前最糟糕的设想来说，这是一个非常乐观的结论。
+
+“但还有一个问题，就是康纳和提姆的状态显然不对劲。”哈尔说。
+
+“他们两个怎么了？”巴里疑惑道，“之前他们不是被超人影响了吗？”
+
+“现在看来这种影响可能也是有限的，或者说克拉克本来也并没有对他们有特别强烈的影响意愿，所以他们两个之前肯定做过一件忤逆克拉克的事情，然后被克拉克……‘教育’了。”哈尔斟酌了一下用词。
+
+“为什么这么说？”亚瑟疑惑。
+
+“我过去的时候，提姆很显然神志恍惚、迟钝，但迪克却说提姆最近只是有点感冒，康纳不在韦恩庄园，我问起来的时候他们说康纳在孤独堡垒，而且身体不适——氪星人可是一种只要没死，晒晒太阳就能啥事没有的种族，一个半氪星人在地球上身体不适，而且还不是因为氪石……哦对，氪石对康纳的效果本来就很弱。”
+
+哈尔这话说完，众人都陷入了沉默。几秒之后，维克多忽然开口：“你觉得这是因为克拉克？”
+
+“我可以确信这是因为克拉克，因为布鲁斯显然对于两个孩子的情况很痛心而且无能为力，这个世界上有多少事情能让他无能为力呢？”哈尔问，“以及，我们可能还是要防备一下迪克。”
+
+众人：“？”
+
+“来自我们亲爱的顾问的暗示，虽然很隐晦，不过我是这么理解的，当然关于这一点，我并不太确定。”哈尔说，“不过灯戒把我们之前的谈话录音了，或许我们应该把录音也给侦探发一份。”
+
+……
+
+杰森得出的结论和哈尔非常类似。
+
+“平时倒是真没看出来他们俩能这么有默契。”杰森吐了句槽，“其实我觉得布鲁斯的意图挺好理解的，他每一句话都不是废话。”
+
+罗伊拿起一块饼干：“……平时也没看出来你俩这么默契？”
+
+“我跟老头之间当然有默契，虽然这不妨碍有时候我们会打得你死我活的。”杰森摆摆手。
+
+少年英雄们：“……”
+
+蝙蝠家族那神奇的父慈子孝的形式啊……
+
+沃利默了默，吃掉手里的饼干，又拿起一块，随后把话题拉了回来：“有吗？我怎么觉得他们大多数时候是在闲谈？”
+
+杰森盯着他手里的饼干看了几秒。
+
+他不记得有人给他们送过饼干。
+
+“闲谈也是有目的的，尤其是在这种时候。”杰森说，在聊天记录里圈出来了一句话，“‘这很大程度上解释了为什么迪克特别喜欢你’，这句话其实就是在警告哈尔迪克是完全受到超人影响的那个人，反过来说，提姆和康纳肯定曾经做过什么事情来反抗超人，但是失败了，而老头对此毫无办法。”
+
+“……这事儿听起来真可怕。”
+
+“但如果从一个更乐观的角度来说的话，那就证明超人的这种影响并不是完全不可逆的，至少提姆和康纳还能依靠自己的力量挣脱。”芭芭拉的声音从通讯频道里传来，“先不论他们能够挣脱到底是因为他们靠自己的意志力挣脱，还是超人觉得他们应该挣脱，至少他们证明了存在这种可能——在面对超人这种能力的敌人的时候，我们需要抓住一切的可能性。”
+
+“但另一个好消息是蝙蝠侠是站在我们这边的。”柯莉说，啃了口饼干，看起来显然是松了口气，“……我竟然有点安心。”
+
+“虽然之前就已经多方确认了这一点，但确实，这是个好消息。所以现在的问题就是去找合适的魔法师了……”杰森点点头，看着桌子上那满满一盘的饼干，又看了一眼同伴们人手一块的饼干，在再次确认了一下哈尔发过来的录音总时长（截止迪克喊他俩去吃饼干为止一共五分三十五秒），嘴角一抽，又补充了一句，“而且要尽快。”
+
+🙌💍🫀🦸🏻🌇❤️🌃🦇🌕🔫🧤
+
+克拉克的无尽饼干盘，可以用396个曲奇饼干合成（确信）不过讲真曲奇应该算是一种药水来着，攒够三十个就能做无限增益了（）
+
+以及我最近在思考一件事，就是关于火猎喜欢奥利奥这件事……怎么说呢，这个设定真的不是奥利奥公司赞助的广告吗……？
+
+## Chapter 11
+
+去查命运博士的wiki的时候差点发出尖锐爆鸣，主要是因为“由于赫卡忒的丈夫哈迪斯另娶新妇导致奥林匹斯诸神背叛，加之敌人利用她自身魔力施展的咒术禁锢——经年囚禁折磨后，她终于爆发出响彻全次元的尖啸，同时感应到"倒吊人"的黑暗存在。”
+
+我倒是可能知道哈迪斯另外娶的是谁，但是他跟赫卡忒曾经是夫妻的设定我确实一下子没绷住。赫卡忒是我很喜欢的一位大女神（当然我不否认里面有很多hades 2的影响，所以这游戏啥时候结束抢先体验出正式版），她的神职基本上与巫术有关，另外她还是三相女神，且其有一个很有意思的设定，就是她是道路女神和掌管三岔路口的女神，经常手执火炬，哇噻想想那个形象就很帅——总之核心思想就是哈迪斯不配……
+
+你什么水平啊跟赫卡忒当夫妻？滚呐！
+
+🙌💍🫀🦸🏻🌇❤️🌃🦇🌕🔫🧤
+
+好消息是地球上有很多魔法师。
+
+“关于这件事，”扎塔娜说，“道理我都懂，但你是不是有点太高看我了。”
+
+顿了顿，扎塔娜又补充道：“康斯坦丁最近应该还在被恶魔追杀呢。”
+
+比利：“呃……我不会。”
+
+坏消息是大多数魔法师都没法完成哈尔和布鲁斯计划中的事情。
+
+“这事你得去找命运博士，”扎塔娜最后说，“你指望我们单挑超人那是不现实的，而且还是这个版本的超人。”
+
+戴安娜想想也是，于是正义联盟又在扎塔娜的指引下前去拜访命运博士。命运博士对此并没有推脱，只是有一个问题。
+
+“本质上我们是要让超人面临一个场景，而这个场景需要让超人相信他是个好人，且并非无所不能，考虑到变更现实的复杂性和不可行，我们需要编织一个梦境，”命运博士如是说，“编制梦境本身并不困难，问题是这个梦境的内容是什么样的呢？”
+
+这是个好问题，因为时间太过紧急，正义联盟暂时还没考虑这个问题。
+
+“尽管如此，现在的克拉克也不能算是一个坏人吧？”巴里寻思了一下，“而且他的问题在于共情阈值的提高和道德枷锁的消除，理论上我们是不是只要解决这两个问题就可以了？”
+
+“这听起来像是个需要做手术的问题。”亚瑟感叹，“我们需要让他‘相信’他没这两个问题？这好像很难靠经历……”
+
+他忽然停了一下。
+
+“亚瑟？”
+
+“我突然想起来一件事，”海王皱着眉，“他们俩上次出任务的时候到底发生了什么到底超人发生了现在的变化？”
+
+哈尔回答：“布鲁斯说是看到了一些斑斓的色块。”
+
+空气里浮动起一些斑斓的色块，显然是命运博士的手笔。到了这时候大多数人也都明白了亚瑟的意思——他是想要通过复刻之前超人和蝙蝠侠两人的经历来重塑超人的认知。
+
+“如果那些色块能够改变超人一次，那么超人必然相信它们也可以改变他第二次。”亚瑟解释了一句，“至于说改变的方向……这一点或许可以由我们决定。”
+
+“我们可以在克拉克看到那些色块的时候，人为改变他对于他自己的认知，”戴安娜说，“就是方法……”
+
+“我可以。”荣恩说。
+
+这就没什么问题了。
+
+“但我们除了要想办法弄明白他们到底经历了什么，还得一比一的复刻。”巴里又想起来一个问题，“这怎么办？”
+
+“我们需要蝙蝠侠的配合，直接用他的记忆来构筑梦境。”命运博士如是说，“只不过这个需要提前跟他商量一下。”
+
+“”
