--- a/src/site/notes/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
 
@@ -4154,7 +4154,7 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 “当领主是够累的。”他抱怨。
 
-周明昭浅笑：“毕竟你想要当个好领主，而优秀的统治者从来都不是一份轻松的工作，不过想来平行宇宙的那位白色超人并不会有和你一样的感觉。”
+周明昭浅笑：“毕竟你想要当个好领主，而成为一个优秀的统治者从来都不是一份轻松的工作——想来平行宇宙的那位白色超人并不会有和你一样的感觉。”
 
 “关于这件事，你们知道多少？”超人问。
 
@@ -4162,3 +4162,30 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 正巧说着，那边主会议室的门就被推开了。蝙蝠侠带着林雨桐走了进来——后者脸上的表情肉眼可见的开心，前者嘛……反正心情也不差，超人能看得出来。
 
+“聊的很开心？”超人问。
+
+蝙蝠侠没有回答，倒是林雨桐兴致勃勃的凑过来要合影。超人欣然应允，然后林雨桐又把蝙蝠侠也一起拽过来了。
+
+拍完三人合影之后，林雨桐翻着手机相册感慨：“真好，我之前可没想到能真的和你们拍这个合影，啊superbat好磕，蝙蝠侠你的耳朵捏起来是软的嘛……所以真不是情侣装？”
+
+女大的思维跳跃度真是令人叹为观止，氪星人也包括在内。超人真的很好奇林雨桐和布鲁斯在此之前都谈了些什么以至于林雨桐的思维跳跃度能到这个程度，但中间确实有个问题是能回答的。
+
+“是硬的。”超人随口道。
+
+蝙蝠侠：“……”
+
+周明昭：“……”
+
+## Chapter 26
+
+超人可能自己都没反应过来自己到底说了句什么，倒是林雨桐愣了两秒之后突然高兴了起来：“我就说肯定是情侣装！”
+
+也不知道她是怎么知道的……
+
+周明昭从这一堆乱七八糟缺乏前文的话题里也大概猜出来了林雨桐在说什么，犹豫了一下：“那……恭喜二位？”
+
+超人：“……”
+
+蝙蝠侠在心里叹了口气，不知道为什么这件本来挺严肃的事的画风又一路往歪的方向狂奔了，只能把话题拉回来：“你们之前都谈了些什么？”
+
+“主要是资源。”超人说，“”
