--- a/src/site/notes/02 小说/03 dc/02 进行中/死亡，你休要骄傲.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/死亡，你休要骄傲.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/死亡，你休要骄傲/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/死亡，你休要骄傲/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/灵感收集","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 标题是John Donne的《Death, be not proud》。本来是灵感来了想写个正经文来着，特意去把至黑之夜看完了，但讲真在看完之后感觉超英们的态度不应该是“死亡，你休要骄傲，因为我们并不害怕”，而是“死亡，你休要骄傲，因为我们可以把你打爆”……
 
