--- a/src/site/notes/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 阅读须知：
 1. 基金会和dc的联动，但不是真正的9391，一切编号请以官网为准。
