--- a/src/site/notes/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 Summary：就，见标题（）
 
