--- a/src/site/notes/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 正义联盟有个群聊，保密线路，当然。英雄们平时闲的没事干的时候会水群，从这点上来说他们和大部分普通人没啥区别。
 
