--- a/src/site/notes/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？.md
@@ -1,407 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？/","tags":["创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/乙女向/否","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
-## 彩蛋
-
-### 【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？
-
-1L 半糖主义
-RT。
-
-2L
-艹，什么怪问题？
-
-3L
-虽然乍一看很怪，但仔细一想确实很怪。
-
-4L
-正义联盟为什么要杀人啊？
-
-5L 半糖主义
-没什么理由，就当他们突然疯了吧。不过这也是我在别的地方看到的问题。虽然原提问者其实是在调侃，但我觉得这个问题可能很值得讨论。
-
-6L 启明星
-我也觉得是个好问题，楼主还有别的附加条件吗？如果是所有超级英雄突然毫无征兆的全部黑化的话，那可能好几年都不一定会被怀疑。
-
-7L 半糖主义
-大概是只有正义联盟的创始成员（考虑到这是游戏论坛，我们就采用三巨头+红绿+钢骨沙赞的组合好了）突然毫无征兆的开始杀人，互相之间配合无间，而且不会因为内部原因发生矛盾导致计划泄露，并且他们会尽最大努力不被发现；剩下的所有超级英雄都反对这件事，一旦他们被发现，那么所有的超级英雄都会和他们站在对立面。
-
-8L 启明星
-这么说的话限制条件还挺多的，稍等我思考一下。
-
-9L 夜航船
-诶，这个有意思。@余光 亲爱的，来看这个。
-
-10L
-wc夜航船？
-
-11L 余光
-来了宝贝——以正义联盟的能力，不管是伪造现场还是处理尸体都很容易，大不了让超人直接把尸体扔木星上。
-
-12L 
-wc夜航船？
-
-13L 半糖主义
-wc夜航船？
-
-14L 夜航船
-干什么啊连着三楼整这出，我出现在论坛上很奇怪吗？
-
-15L
-你这时候不是应该在忙着修mod的bug吗？舍予发的教程贴现在还在论坛蝙蝠侠区被人工置顶呢。
-
-16L 夜航船
-我都说了那不是bug，也没打算修——不是，我承认我写夜翼黑化的mod是有点恶趣味在里面，但这不意味着我不喜欢正常夜翼好吧？当蝙蝠侠的谁不喜欢小鸟？
-
-17L 
-说的有道理，当蝙蝠侠的谁不喜欢小鸟？
-
-18L
-蝙蝠侠玩家作证，其实只要“蝙蝠侠”是正常的，mod里的夜翼也会很正常（不过确实有点病娇了，姐咱考虑出个稍微正常点的版本吗？）。而且舍予的养成路线也很容易复刻，谁不喜欢养出来一只阳光活泼喜欢贴贴的小鸟呢？
-
-19L 夜航船
-下个版本会有一个夜翼性格修正的补丁，可以把他的性格设定改成正常的主宇宙夜翼，另外我上次跟舍予私聊的时候还从她那拿到了她那个夜翼的性格数据，到时候一块作为可选择的补丁发在github上。
-
-20L
-好诶，大佬牛逼！
-
-21L
-大佬牛逼！
-
-22L
-大佬牛逼！
-
-23L 启明星
-我回来了。刚才跟ai讨论了一下，ai觉得最终的数量级可能在三千到四千人，但我觉得不止，因为dc宇宙毕竟很多灾多难，正义联盟甚至不需要去“故意杀人”，他们只要“刻意不去救人”就能轻松超过这个数字，比如达克赛德入侵的时候正义联盟专注对付达克赛德不考虑平民伤亡，数以万计的死伤轻轻松松，而且肯定没人怀疑是正义联盟干的。
-
-24L 余光
-但楼主不也说了是“故意杀人”吗？附带损伤也可以计算的话，那把美国死亡率翻倍轻轻松松啊。
-
-25L 半糖主义
-所有可能性都可以考虑上，附带损伤也可以算，只要是正义联盟主观想要造成伤亡就可以。
-
-26L 舍予
-这个设想很有意思诶。我觉得如果正义联盟真的打算开杀，比起故意杀人他们确实更可能采用更加隐蔽的附带损害模式。不过考虑实际情况，大规模外星入侵可能不会发生的特别频繁，而且正义联盟的行为目的也很值得在意——他们到底是单纯追求杀伤数字/被发现时间的最大比值，还是说他们的目标只是为了杀人，不被发现纯粹是嫌麻烦？
-
-27L 舍予
-如果是前者，那他们可能会耐心等待或者干脆制造大规模外星入侵，随后以救世主的身份介入战争，并且在战争中造成“不可避免的”附带损伤，情况合适的话一年内造成百万杀伤完全不是问题，而且甚至可能不会被发现；而如果是后者，那可能在杀死几千人之后就会被发现了，大范围的死亡案件肯定会被发现彼此之间的关联的。
-
-28L
-舍予也来了？
-
-29L
-比起这个，舍予为什么看起来也对这事很感兴趣？
-
-30L
-你换个角度想想，能和夜航船关系好的能是什么正常人吗（）
-
-31L 夜航船
-回复 30L：喂！
-
-32L 舍予
-回复 30L：[不是，哥们. Jpg]
-
-33L
-有时候我会觉得这游戏的蝙蝠玩家都不太正常，夜航船、舍予，还有启明星……楼主不会也是蝙蝠玩家吧？
-
-34L 半糖主义
-是。[存档截图. Jpg]
-
-35L
-28L神机妙算，而且为什么总是蝙蝠侠玩家在想着毁灭世界？
-
-36L
-蝙蝠玩家澄清一下，不是所有的蝙蝠都想着毁灭世界，而且余光是超人玩家好吗？
-
-37L
-你拿黑暗领主来跟普通联盟对比？黑暗领主的精神状态有点太美妙了。
-
-39L 余光
-澄清一下，虽然我们自称“DarkLord”，但我们也是有一个正常存档的，黑暗领主世界更多只是用来整活的。
-
-40L 启明星
-有没有一种可能，只是喜欢推理的玩家更多的会去玩蝙蝠侠这个角色？
-
-41L 夜航船
-我觉得你不用解释，越描越黑了属于是。
-
-42L 舍予
-夜航船说得对，不过说起这个来，我觉得我们可以去验证一下。
-
-43L
-？
-
-44L
-？
-
-45L
-？
-
-46L
-舍予，你变了（沉痛）
-
-47L 舍予
-……单独开个新档啊！谁会在自己的主存档里开屠杀啊！
-
-48L
-其实平心而论我觉得我们平时杀的NPC也不少，只不过除了女侠玩家之外杀NPC不会有任何后续效应，反正他们还是会刷出来的……
-
-49L 夜航船
-讲真这看起来应该是我提出来的建议，不过舍予说得对，我们可以实验一下。有人要参与吗？
-
-50L 启明星
-我也来，我也好奇这个问题。
-
-51L 半糖主义
-我也报名，@夜航船 我也会一点mod制作，有需要帮忙的话可以喊我。
-
-52L
-回复 48L：有道理，但现在这群人好像是打算模拟一下实际情况，他们要杀的可不是能随便刷新的NPC……
-
-53L 夜航船
-还有人想报名的带上存档截图私聊我。
-
-### 【正义联盟杀人案（7）】
-
-【夜航船：欢迎各位蝙蝠玩家——不是，为什么全是蝙蝠玩家？】
-
-【舍予：？私信找你的也全是蝙蝠玩家吗？】
-
-【夜航船：是啊！】
-
-【舍予：……】
-
-【启明星：……】
-
-【半糖主义：……】
-
-【山月辞：……】
-
-【阿尔法零：……】
-
-【404无响应：……】
-
-【舍予：换个角度想想，这也可能是正义联盟的史诗级加强。当然我们应该是没法和真实的老爷比智商，但万一联盟真的变成了七个有不同超能力的、决定开始无差别开屠杀的蝙蝠侠……】
-
-【山月辞：你这么一说的话听起来好可怕，而且我记得蝙蝠甚至说出来过可以帮超人伪造卢瑟死亡现场的话……当时的卢瑟可是美国总统啊。】
-
-【404无响应：[网址]我这有个半成品的mod，@夜航船 你看看能不能用？】
-
-【半糖主义：哦这个好，我和夜航船刚才还在商量着从头开发呢。】
-
-【夜航船：数值框架都是现成的，花点时间把我这边的人物行为逻辑加进去就行了，这周末之前就能搞定。】
-
-【半糖主义：要么这个周末我们就开始测试吧，周六上午九点，各位有时间吗？】
-
-【舍予：有】
-
-【启明星：有】
-
-【山月辞：有】
-
-【阿尔法零：有】
-
-【404 无响应：有】
-
-【夜航船：OK，那我到时候发服务器邀请，之后我们再商量一下角色认领的问题。】
-
-周六上午八点四十五，“超人和蝙蝠侠”出现在了瞭望塔内。本次的存档来自舍予——她手头的联盟存档最接近正常情况下的dc主宇宙，而且时间线相对靠后。
-
-“哇哦，还是第一次玩超人。”舍予感慨。
-
-“你没玩过？”夜航船深感意外。
-
-“没时间，光顾着养小鸟了，小鸟可爱。”舍予说，“话说你有考虑过做超人崽子们的养成线吗？”
-
-“没需求啊，你的超人想养崽？”
-
-“不，我的超人只想把大都会图图干净，讲真要不是她杀人不眨眼我都想把她推荐过来了……”
-
-“所以为啥不推荐？”
-
-“因为她杀人不眨眼——她要是参与这计划，估计开始行动的当天就暴露了，跟咱们的实验目标不符。”
-
-“什么蹂躏者转世。”夜航船吐了句槽。
-
-“她就这样，玩啥都是战狂。”舍予摇摇头，“其他人呢？”
-
-舍予话音刚落，几道人影便接连出现在屏幕上。
-
-“我们来了。”半糖主义——神奇女侠——打了个招呼，“这是谁的存档？”
-
-“我们的，”舍予道，“怎么了？”
-
-“你回头问问你家女侠从哪儿找的这个女侠模型，”半糖说着，在空中转了一圈，“这个好看。”
-
-“应该是创意工坊，我回头问问。”舍予点点头。
-
-夜航船把话题拉回正轨：“既然人都来了，准备开始吧？”
-
-“没问题，”舍予说着，看向了瞭望塔舰桥上新出现的虚拟界面，上面详细监控着世界范围内每一个英雄的动向，“我们先定个计划吧。”
-
-### 【原创模组】转发 如果正义联盟突然开始无差别杀人，需要多久才能被发现？
-
-1L 夜航船
-
-家人们，之前这个问题的测试结果出来啦！我们的结论是85天，3456人，没有大规模入侵，只考虑故意杀人的情况。
-然后这是我们在测试中使用的mod，现在公布出来，感谢@404无响应 提供的mod基底和@半糖主义 提供的技术支持！
-[附件：屠杀不道德mod.zip]
-[附件：屠杀全流程视频精彩片段集锦.mp4]
-
-2L 
-你们还真去做实验了？
-
-3L
-卧槽，牛逼……
-
-4L
-比我一开始想的要少很多诶。
-
-5L 启明星
-一方面我们没提前把蝙蝠家族弄死，另一方面我们没考虑大规模入侵。不过我们用的存档里面蝙蝠家族对蝙蝠侠本身就很信任，这可能延缓了他们发现真相的进度。
-
-6L 半糖主义
-别说了，刚才我又重新登了舍予的号回去看了一眼那个存档，卧槽你们怎么忍心下的去手的啊！@夜航船 @舍予 你们两个，那个蝙蝠家族那么可爱！
-
-7L 舍予
-……？
-
-8L 舍予
-不是，不是说好了要弄死所有人吗？我养出来的蝙蝠家族我杀起来也良心不安好吗？杀完之后我就回主存档找孩子们贴贴去了。
-
-9L 山月辞
-不得不说舍予确实挺会养孩子的，那个蝙蝠家族是真的治愈，有没有考虑过公开存档让大伙都去治愈一下？
-
-10L 舍予
-？？？你们想对我的孩子们做什么？！
-
-11L
-大佬们，跑题啦，求mod安装教程。
-
-12L 夜航船
-看模组区置顶。
-
-13L
-谢谢大佬分享！
-
-14L
-哇塞视频看的我都有点心疼了（）沃利看起来好伤心。
-
-15L
-凯——尔——！你甚至没被哈尔认出来——！
-
-16L
-绿灯玩家想说这有点过分了。
-
-17L 半糖主义
-毕竟我们是七个蝙蝠玩家嘛，要不然也不至于最后没人忍心动手杀小鸟，还是靠庄园的自动防御系统……虽然我感觉舍予建的那玩意儿更像是自动攻击系统，火力也太充足了。
-
-18L
-所以大佬们最后是怎么处理蝙蝠家族的？自动防御系统全灭了吗？
-
-19L 夜航船
-回复 18L：没全灭，但也没好到哪去。防御系统干掉了三分之二，剩下的全部重伤，反正也离死不远了，不过我们的测试就到这了，所以也没再去处理，直接把存档删了。
-
-20L 半糖主义
-我们蝙蝠侠玩家是这样的，宁可拆家也不亲手杀鸟.jpg
-
-21L
-你管这叫不杀？！
-
-22L 舍予
-回复 21L：至少没直接弄死吗。不过女侠倒确实杀伐果断，我还在犹豫要不要杀康纳呢，女侠上来就手起剑落……
-
-23L
-草，女侠玩家这么冷酷的吗？
-
-24L 启明星
-回复 23L：女侠玩家是半糖，这茬就是她提出来的，她当然杀伐果断了……但最绝的还是沙赞，我都没想到对小孩下手效率能这么高。
-
-25L
-？？？沙赞居然对小孩下手？
-
-26L 阿尔法零
-测试需要。而且这样杀人效率超高，专挑流浪汉、孤儿和青少年罪犯，以比利·巴特森的身份接近，再找个机会弄死就行了，毕竟这些人失踪了也没人追查。
-
-27L
-……什么反派联盟。
-
-28L
-你们蝙蝠玩家好可怕.jpg
-
-29L 阿尔法零
-然后尸体交给超人往木星上一扔，监控交给钢骨处理掉，挺简单的。
-
-30L 舍予
-说起来卢瑟好像比大部分英雄都更早发现这件事，但他不知道为啥啥事都没干，也不知道是没证据还是我们的ai不完善。
-
-31L
-笑死，所以卢瑟全程就搁那看着？
-
-32L 半糖主义
-那还能怎么办呢，报警说“超人杀人但尸体在木星”吗？这太荒谬了。
-
-33L
-我怎么突然感觉卢瑟成正义伙伴了……明明超人才是英雄，卢瑟是个反派啊？他在我存档里一天到晚给我捣乱，我那堆日常任务至少有三分之一是他整出来的。
-
-34L
-才三分之一？我这至少一半，这家伙太能整活了。
-
-35L 404无响应
-回复 30L：其实卢瑟的逻辑有一条是谋定而后动，所以他可能是在憋大招。可惜我们测试时间太短，没等到他出手。
-
-36L 舍予
-回复 35L：草，那要是再拖久点岂不是能看到卢瑟整出来的活？
-
-37L 半糖主义
-回复 36L：……讲真我觉得这事不是我们能决定的。
-
-38L
-所以大佬们下次还测不测？比如加上大规模入侵之类的？
-
-39L 舍予
-测个鬼，杀小鸟已经够我PTSD了，你们自己去折腾吧（）
-
-40L 启明星
-其实可以试试用反派存档测，比如让夜航船贡献一下他们的存档之类的，换个人设是不是就能过心里这一关了？
-
-41L 舍予
-？启明星，我怎么记得上次是你们主动提出挑战黑暗领主的？
-
-42L 夜航船
-回复 40L：好主意！下次整？
-
-43L 404无响应
-我倒是觉得如果真用反派存档测，可能当天就被发现了——毕竟他们本来就没信誉，而且黑化领主的作风好像也不需要随机无差别杀人ᕕ( ᐛ )ᕗ
-
-44L
-草，突然合理。
-
-45L
-所以结论是正联能撑85天全靠平时人设太正义？😏
-
-46L
-艹，某种意义上的地狱笑话。
-
-47L
-好像也确实，要是黑化领主的话那根本也用不着测试这东西了……嘶，我再去看一遍视频，甚至有点带感？
-
-48L
-妈妈，论坛里有变态啊！
-
-49L 夜航船
-总之mod和视频都发了，感兴趣的可以自己试试。不过这个mod只是加了个道德值的设定，并不一定非要用来干这么极端的事。以及，如果真的打算整这个的话，一定要备份存档！备份存档！备份存档！
-
-50L
-……我刚才手滑把星球日报炸了，现在道德值直接掉到了负数……怎么办？
-
-51L 舍予
-回复 50L：🕯️🕯️🕯️
-
-52L 夜航船
-……
-或者我还需要单独再强调一下这个mod的难度等级……
 
 ## 正文
 
@@ -437,7 +37,7 @@ u盘里面的内容相当多。
 
 “天呐。”迪克慨叹。
 
-“以及，”提姆说，“这些意外事件几乎没有任何一起在网上掀起什么风浪，包括受害者的家属和朋友之类的人。但根据我们的调查，这些人不是没在互联晚上发声，而是有人删掉了他们的发出来的帖子和视频，甚至这些发声的人……也都会在不久之后‘意外死亡’。”
+“以及，”提姆说，“这些意外事件几乎没有任何一起在网上掀起什么风浪，包括受害者的家属和朋友之类的人。但根据我们的调查，这些人不是没在互联网上发声，而是有人删掉了他们的发出来的帖子和视频，甚至这些发声的人……也都会在不久之后‘意外死亡’。”
 
 “……钢骨。”
 
@@ -813,7 +413,7 @@ u盘里面的内容相当多。
 
 哇，我写了个什么东西.jpg。
 
-你们大概也看出来了，这是玩家们整出来的活（）这个脑洞我想写很久了，但一直没找到合适的机会写，主要是正义联盟毫无理由的黑化之后不好收场，直到前几天想起来还有个玩家的世界观……
+你们大概也看出来了，这是非人之物世界观里玩家们整出来的活（）这个脑洞我想写很久了，但一直没找到合适的机会写，主要是正义联盟毫无理由的黑化之后不好收场，直到前几天想起来还有个玩家的世界观……
 
 好，整！
 
@@ -824,3 +424,404 @@ u盘里面的内容相当多。
 对了说起周漫来，她倒不是真的打算对蝙蝠家族做点啥，主要是战狂玩游戏的习惯就是遇到东西先杀一下，不是故意针对蝙蝠家族，她对谁都这样……明舒知道自家好友的德行，所以确实也在游戏里防着周漫跑来捣乱，周漫也不会真的作死去弄死小鸟们的（她对小鸟们没什么看法，但会顾虑明舒的想法）。话虽如此，但小鸟们确实对“超人”印象非常差，包括康纳也是——周漫对康纳有点管生不管养的意思，做了任务有了康纳，但是没怎么在意这孩子，所以康纳对超人也相当冷漠。
 
 彩蛋部分是玩家们在论坛上的讨论以及一些关于前因后果的闲聊（）
+
+## 彩蛋
+
+### 【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？
+
+1L 半糖主义
+RT。
+
+2L
+艹，什么怪问题？
+
+3L
+虽然乍一看很怪，但仔细一想确实很怪。
+
+4L
+正义联盟为什么要杀人啊？
+
+5L 半糖主义
+没什么理由，就当他们突然疯了吧。不过这也是我在别的地方看到的问题。虽然原提问者其实是在调侃，但我觉得这个问题可能很值得讨论。
+
+6L 启明星
+我也觉得是个好问题，楼主还有别的附加条件吗？如果是所有超级英雄突然毫无征兆的全部黑化的话，那可能好几年都不一定会被怀疑。
+
+7L 半糖主义
+大概是只有正义联盟的创始成员（考虑到这是游戏论坛，我们就采用三巨头+红绿+钢骨沙赞的组合好了）突然毫无征兆的开始杀人，互相之间配合无间，而且不会因为内部原因发生矛盾导致计划泄露，并且他们会尽最大努力不被发现；剩下的所有超级英雄都反对这件事，一旦他们被发现，那么所有的超级英雄都会和他们站在对立面。
+
+8L 启明星
+这么说的话限制条件还挺多的，稍等我思考一下。
+
+9L 夜航船
+诶，这个有意思。@余光 亲爱的，来看这个。
+
+10L
+wc夜航船？
+
+11L 余光
+来了宝贝——以正义联盟的能力，不管是伪造现场还是处理尸体都很容易，大不了让超人直接把尸体扔木星上。
+
+12L 
+wc夜航船？
+
+13L 半糖主义
+wc夜航船？
+
+14L 夜航船
+干什么啊连着三楼整这出，我出现在论坛上很奇怪吗？
+
+15L
+你这时候不是应该在忙着修mod的bug吗？舍予发的教程贴现在还在论坛蝙蝠侠区被人工置顶呢。
+
+16L 夜航船
+我都说了那不是bug，也没打算修——不是，我承认我写夜翼黑化的mod是有点恶趣味在里面，但这不意味着我不喜欢正常夜翼好吧？当蝙蝠侠的谁不喜欢小鸟？
+
+17L 
+说的有道理，当蝙蝠侠的谁不喜欢小鸟？
+
+18L
+蝙蝠侠玩家作证，其实只要“蝙蝠侠”是正常的，mod里的夜翼也会很正常（不过确实有点病娇了，姐咱考虑出个稍微正常点的版本吗？）。而且舍予的养成路线也很容易复刻，谁不喜欢养出来一只阳光活泼喜欢贴贴的小鸟呢？
+
+19L 夜航船
+下个版本会有一个夜翼性格修正的补丁，可以把他的性格设定改成正常的主宇宙夜翼，另外我上次跟舍予私聊的时候还从她那拿到了她那个夜翼的性格数据，到时候一块作为可选择的补丁发在github上。
+
+20L
+好诶，大佬牛逼！
+
+21L
+大佬牛逼！
+
+22L
+大佬牛逼！
+
+23L 启明星
+我回来了。刚才跟ai讨论了一下，ai觉得最终的数量级可能在三千到四千人，但我觉得不止，因为dc宇宙毕竟很多灾多难，正义联盟甚至不需要去“故意杀人”，他们只要“刻意不去救人”就能轻松超过这个数字，比如达克赛德入侵的时候正义联盟专注对付达克赛德不考虑平民伤亡，数以万计的死伤轻轻松松，而且肯定没人怀疑是正义联盟干的。
+
+24L 余光
+但楼主不也说了是“故意杀人”吗？附带损伤也可以计算的话，那把美国死亡率翻倍轻轻松松啊。
+
+25L 半糖主义
+所有可能性都可以考虑上，附带损伤也可以算，只要是正义联盟主观想要造成伤亡就可以。
+
+26L 舍予
+这个设想很有意思诶。我觉得如果正义联盟真的打算开杀，比起故意杀人他们确实更可能采用更加隐蔽的附带损害模式。不过考虑实际情况，大规模外星入侵可能不会发生的特别频繁，而且正义联盟的行为目的也很值得在意——他们到底是单纯追求杀伤数字/被发现时间的最大比值，还是说他们的目标只是为了杀人，不被发现纯粹是嫌麻烦？
+
+27L 舍予
+如果是前者，那他们可能会耐心等待或者干脆制造大规模外星入侵，随后以救世主的身份介入战争，并且在战争中造成“不可避免的”附带损伤，情况合适的话一年内造成百万杀伤完全不是问题，而且甚至可能不会被发现；而如果是后者，那可能在杀死几千人之后就会被发现了，大范围的死亡案件肯定会被发现彼此之间的关联的。
+
+28L
+舍予也来了？
+
+29L
+比起这个，舍予为什么看起来也对这事很感兴趣？
+
+30L
+你换个角度想想，能和夜航船关系好的能是什么正常人吗（）
+
+31L 夜航船
+回复 30L：喂！
+
+32L 舍予
+回复 30L：[不是，哥们. jpg]
+
+33L
+有时候我会觉得这游戏的蝙蝠玩家都不太正常，夜航船、舍予，还有启明星……楼主不会也是蝙蝠玩家吧？
+
+34L 半糖主义
+是。[存档截图. jpg]
+
+35L
+33L神机妙算，而且为什么总是蝙蝠侠玩家在想着毁灭世界？
+
+36L
+蝙蝠玩家澄清一下，不是所有的蝙蝠都想着毁灭世界，而且余光是超人玩家好吗？
+
+37L
+你拿黑暗领主来跟普通联盟对比？黑暗领主的精神状态有点太美妙了。
+
+39L 余光
+澄清一下，虽然我们自称“DarkLord”，但我们也是有一个正常存档的，黑暗领主世界更多只是用来整活的。
+
+40L 启明星
+有没有一种可能，只是喜欢推理的玩家更多的会去玩蝙蝠侠这个角色？
+
+41L 夜航船
+我觉得你不用解释，越描越黑了属于是。
+
+42L 舍予
+夜航船说得对，不过说起这个来，我觉得我们可以去验证一下。
+
+43L
+？
+
+44L
+？
+
+45L
+？
+
+46L
+舍予，你变了（沉痛）
+
+47L 舍予
+……单独开个新档啊！谁会在自己的主存档里开屠杀啊！
+
+48L
+其实平心而论我觉得我们平时杀的NPC也不少，只不过除了女侠玩家之外杀NPC不会有任何后续效应，反正他们还是会刷出来的……
+
+49L 夜航船
+讲真这看起来应该是我提出来的建议，不过舍予说得对，我们可以实验一下。有人要参与吗？
+
+50L 启明星
+我也来，我也好奇这个问题。
+
+51L 半糖主义
+我也报名，@夜航船 我也会一点mod制作，有需要帮忙的话可以喊我。
+
+52L
+回复 48L：有道理，但现在这群人好像是打算模拟一下实际情况，他们要杀的可不是能随便刷新的NPC……
+
+53L 夜航船
+还有人想报名的带上存档截图私聊我。
+
+### 【正义联盟杀人案（7）】
+
+【夜航船：欢迎各位蝙蝠玩家——不是，为什么全是蝙蝠玩家？】
+
+【舍予：？私信找你的也全是蝙蝠玩家吗？】
+
+【夜航船：是啊！】
+
+【舍予：……】
+
+【启明星：……】
+
+【半糖主义：……】
+
+【山月辞：……】
+
+【阿尔法零：……】
+
+【404无响应：……】
+
+【舍予：换个角度想想，这也可能是正义联盟的史诗级加强。当然我们应该是没法和真实的老爷比智商，但万一联盟真的变成了七个有不同超能力的、决定开始无差别开屠杀的蝙蝠侠……】
+
+【山月辞：你这么一说的话听起来好可怕，而且我记得蝙蝠甚至说出来过可以帮超人伪造卢瑟死亡现场的话……当时的卢瑟可是美国总统啊。】
+
+【404无响应：[网址]我这有个半成品的mod，@夜航船 你看看能不能用？】
+
+【半糖主义：哦这个好，我和夜航船刚才还在商量着从头开发呢。】
+
+【夜航船：数值框架都是现成的，花点时间把我这边的人物行为逻辑加进去就行了，这周末之前就能搞定。】
+
+【半糖主义：要么这个周末我们就开始测试吧，周六上午九点，各位有时间吗？】
+
+【舍予：有】
+
+【启明星：有】
+
+【山月辞：有】
+
+【阿尔法零：有】
+
+【404 无响应：有】
+
+【夜航船：OK，那我到时候发服务器邀请，之后我们再商量一下角色认领的问题。】
+
+周六上午八点四十五，“超人和蝙蝠侠”出现在了瞭望塔内。本次的存档来自舍予——她手头的联盟存档最接近正常情况下的dc主宇宙，而且时间线相对靠后。
+
+“哇哦，还是第一次玩超人。”舍予感慨。
+
+“你没玩过？”夜航船深感意外。
+
+“没时间，光顾着养小鸟了，小鸟可爱。”舍予说，“话说你有考虑过做超人崽子们的养成线吗？”
+
+“没需求啊，你的超人想养崽？”
+
+“不，我的超人只想把大都会图图干净，讲真要不是她杀人不眨眼我都想把她推荐过来了……”
+
+“所以为啥不推荐？”
+
+“因为她杀人不眨眼——她要是参与这计划，估计开始行动的当天就暴露了，跟咱们的实验目标不符。”
+
+“什么蹂躏者转世。”夜航船吐了句槽。
+
+“她就这样，玩啥都是战狂。”舍予摇摇头，“其他人呢？”
+
+舍予话音刚落，几道人影便接连出现在屏幕上。
+
+“我们来了。”半糖主义——神奇女侠——打了个招呼，“这是谁的存档？”
+
+“我们的，”舍予道，“怎么了？”
+
+“你回头问问你家女侠从哪儿找的这个女侠模型，”半糖说着，在空中转了一圈，“这个好看。”
+
+“应该是创意工坊，我回头问问。”舍予点点头。
+
+夜航船把话题拉回正轨：“既然人都来了，准备开始吧？”
+
+“没问题，”舍予说着，看向了瞭望塔舰桥上新出现的虚拟界面，上面详细监控着世界范围内每一个英雄的动向，“我们先定个计划吧。”
+
+### 【原创模组】转发 如果正义联盟突然开始无差别杀人，需要多久才能被发现？
+
+1L 夜航船
+
+家人们，之前这个问题的测试结果出来啦！我们的结论是85天，3456人，没有大规模入侵，只考虑故意杀人的情况。
+然后这是我们在测试中使用的mod，现在公布出来，感谢@404无响应 提供的mod基底和@半糖主义 提供的技术支持！
+[附件：屠杀不道德mod.zip]
+[附件：屠杀全流程视频精彩片段集锦.mp4]
+
+2L 
+你们还真去做实验了？
+
+3L
+卧槽，牛逼……
+
+4L
+比我一开始想的要少很多诶。
+
+5L 启明星
+一方面我们没提前把蝙蝠家族弄死，另一方面我们没考虑大规模入侵。不过我们用的存档里面蝙蝠家族对蝙蝠侠本身就很信任，这可能延缓了他们发现真相的进度。
+
+6L 半糖主义
+别说了，刚才我又重新登了舍予的号回去看了一眼那个存档，卧槽你们怎么忍心下的去手的啊！@夜航船 @舍予 你们两个，那个蝙蝠家族那么可爱！
+
+7L 舍予
+……？
+
+8L 舍予
+不是，不是说好了要弄死所有人吗？我养出来的蝙蝠家族我杀起来也良心不安好吗？杀完之后我就回主存档找孩子们贴贴去了。
+
+9L 山月辞
+不得不说舍予确实挺会养孩子的，那个蝙蝠家族是真的治愈，有没有考虑过公开存档让大伙都去治愈一下？
+
+10L 舍予
+？？？你们想对我的孩子们做什么？！
+
+11L
+大佬们，跑题啦，求mod安装教程。
+
+12L 夜航船
+看模组区置顶。
+
+13L
+谢谢大佬分享！
+
+14L
+哇塞视频看的我都有点心疼了（）沃利看起来好伤心。
+
+15L
+凯——尔——！你甚至没被哈尔认出来——！
+
+16L
+绿灯玩家想说这有点过分了。
+
+17L 半糖主义
+毕竟我们是七个蝙蝠玩家嘛，要不然也不至于最后没人忍心动手杀小鸟，还是靠庄园的自动防御系统……虽然我感觉舍予建的那玩意儿更像是自动攻击系统，火力也太充足了。
+
+18L
+所以大佬们最后是怎么处理蝙蝠家族的？自动防御系统全灭了吗？
+
+19L 夜航船
+回复 18L：没全灭，但也没好到哪去。防御系统干掉了三分之二，剩下的全部重伤，反正也离死不远了，不过我们的测试就到这了，所以也没再去处理，直接把存档删了。
+
+20L 半糖主义
+我们蝙蝠侠玩家是这样的，宁可拆家也不亲手杀鸟.jpg
+
+21L
+你管这叫不杀？！
+
+22L 舍予
+回复 21L：至少没直接弄死吗。不过女侠倒确实杀伐果断，我还在犹豫要不要杀康纳呢，女侠上来就手起剑落……
+
+23L
+草，女侠玩家这么冷酷的吗？
+
+24L 启明星
+回复 23L：女侠玩家是半糖，这茬就是她提出来的，她当然杀伐果断了……但最绝的还是沙赞，我都没想到对小孩下手效率能这么高。
+
+25L
+？？？沙赞居然对小孩下手？
+
+26L 阿尔法零
+测试需要。而且这样杀人效率超高，专挑流浪汉、孤儿和青少年罪犯，以比利·巴特森的身份接近，再找个机会弄死就行了，毕竟这些人失踪了也没人追查。
+
+27L
+……什么反派联盟。
+
+28L
+你们蝙蝠玩家好可怕.jpg
+
+29L 阿尔法零
+然后尸体交给超人往木星上一扔，监控交给钢骨处理掉，挺简单的。
+
+30L 舍予
+说起来卢瑟好像比大部分英雄都更早发现这件事，但他不知道为啥啥事都没干，也不知道是没证据还是我们的ai不完善。
+
+31L
+笑死，所以卢瑟全程就搁那看着？
+
+32L 半糖主义
+那还能怎么办呢，报警说“超人杀人但尸体在木星”吗？这太荒谬了。
+
+33L
+我怎么突然感觉卢瑟成正义伙伴了……明明超人才是英雄，卢瑟是个反派啊？他在我存档里一天到晚给我捣乱，我那堆日常任务至少有三分之一是他整出来的。
+
+34L
+才三分之一？我这至少一半，这家伙太能整活了。
+
+35L 404无响应
+回复 30L：其实卢瑟的逻辑有一条是谋定而后动，所以他可能是在憋大招。可惜我们测试时间太短，没等到他出手。
+
+36L 舍予
+回复 35L：草，那要是再拖久点岂不是能看到卢瑟整出来的活？
+
+37L 半糖主义
+回复 36L：……讲真我觉得这事不是我们能决定的。
+
+38L
+所以大佬们下次还测不测？比如加上大规模入侵之类的？
+
+39L 舍予
+测个鬼，杀小鸟已经够我PTSD了，你们自己去折腾吧（）
+
+40L 启明星
+其实可以试试用反派存档测，比如让夜航船贡献一下他们的存档之类的，换个人设是不是就能过心里这一关了？
+
+41L 舍予
+？启明星，我怎么记得上次是你们主动提出挑战黑暗领主的？
+
+42L 夜航船
+回复 40L：好主意！下次整？
+
+43L 404无响应
+我倒是觉得如果真用反派存档测，可能当天就被发现了——毕竟他们本来就没信誉，而且黑化领主的作风好像也不需要随机无差别杀人ᕕ( ᐛ )ᕗ
+
+44L
+草，突然合理。
+
+45L
+所以结论是正联能撑85天全靠平时人设太正义？😏
+
+46L
+艹，某种意义上的地狱笑话。
+
+47L
+好像也确实，要是黑化领主的话那根本也用不着测试这东西了……嘶，我再去看一遍视频，甚至有点带感？
+
+48L
+妈妈，论坛里有变态啊！
+
+49L 夜航船
+总之mod和视频都发了，感兴趣的可以自己试试。不过这个mod只是加了个道德值的设定，并不一定非要用来干这么极端的事。以及，如果真的打算整这个的话，一定要备份存档！备份存档！备份存档！
+
+50L
+……我刚才手滑把星球日报炸了，现在道德值直接掉到了负数……怎么办？
+
+51L 舍予
+回复 50L：🕯️🕯️🕯️
+
+52L 夜航船
+……
+或者我还需要单独再强调一下这个mod的难度等级……
