--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙右】圆舞曲.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙右】圆舞曲.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙右】圆舞曲/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙右】圆舞曲/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 summary：来吃口布蝙吧我什么都不会做的！（？）
 
