--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙绿】惩罚我.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙绿】惩罚我.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙绿】惩罚我/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙绿】惩罚我/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 新52正联刊的cp安排好离谱，大超和女侠在一起这种事情补药啊！而且时机也很阴间啊啊啊啊啊啊啊！
 
