--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
+
 
 看到一张可爱芒果小鸟的蝙蝠家的图，不行了太可爱了是我可以盯着傻乐十分钟的那种可爱！
 
