--- a/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版.md
@@ -1,60 +1,72 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
 
 ## 0 前言
 
-<label class="ob-comment" title="" style=""> 尊敬的游客，欢迎您参观位于近地轨道的正义联盟总部——瞭望塔！这里是英雄、光明与希望的象征，我们很荣幸能与您分享这份荣耀与奇迹。为了确保您拥有一次安全、愉快、难忘的体验，请仔细阅读并严格遵守以下参观指南。 <input type="checkbox"> <span style=""> （在“英雄、光明与希望”下画了两条线）
-NW：哇，真的嘛？
-S：很难说是假的，物理上来说。
-B：至少后两条确实如此。
-</span></label>
+尊敬的游客，欢迎您参观位于近地轨道的正义联盟总部——瞭望塔！这里是英雄、光明与希望的象征，我们很荣幸能与您分享这份荣耀与奇迹。为了确保您拥有一次安全、愉快、难忘的体验，请仔细阅读并严格遵守以下参观指南。
+
+> （在“英雄、光明与希望”下画了两条线）
+> NW：哇，真的嘛？
+> S：很难说是假的，物理上来说。
+> B：至少后两条确实如此。
 
 ## 1 通则
 1.1 许可与登记
 	1.1.1 若您获得参观瞭望塔的许可，您的邮箱将收到由“全球文化与技术创新组织 (Universal Technological Nexus)”发放的专属参观二维码，请妥善保存。
-> [!NOTE] 
+
 > NW：全球文化与技术创新组织……？
 > B：理事会的伪装组织。
 > G：要我说的话他们这个伪装有点太不走心了。
 > M：考虑到实际上并没有多少人知道理事会的存在，这个伪装已经足够了。
+
 	1.1.2 参观开始前及结束后，请在向导的指引下，于指定地点扫描二维码完成登记，方可进入/离开传送区域。
-> [!NOTE] 
+
 > NW：二维码有什么用？
-> S：告诉瞭望塔“有个人类进来了”。
+> S：告诉瞭望塔“有个友善的人类进来了”。
 > B：身份标识，否则会被瞭望塔当成敌人处理。
+
 1.2 向导
 	1.2.1 您的向导将由穿着统一制服的人类男性/女性担任，制服标准配色为：亮红色（255,0,0）外套、草绿色（0,255,0）上衣、宝蓝色（0,0,255）长裤，并携带一本亮黄色（255,255,0）的工作证（无论任何天气或季节）。
-> [!note]
+
 > NW：（尖锐的爆鸣）谁想出来的配色！！！
-> S：我以为你会喜欢这个配色的？你的罗宾制服……
-> NW：那也没有蓝色啊！！！
-> W：那你最初版本的夜翼制服……
+> S：我以为你会喜欢这个配色的？
 > NW：……
 > B：我。鲜艳的颜色有助于我从阴影中识别他们的存在。
+> NW：……
+> NW：……好吧，至少确实很显眼。
+
 	1.2.2 您将在邮件中收到向导的信息，在向导与您首次接触时，请确认以下信息：
 		- 其制服颜色与标准完全一致；
 		- 其所佩戴的工作证上的身份信息与邮件内容完全一致；
 		- 其本人样貌与邮件及工作证提供的证件照片可被明确识别为同一人。
 	1.2.3 向导会在您的游览过程中为您提供最好的服务与安全保障，若您在任何时候对向导身份、相貌或着装产生强烈疑虑，您可随时要求核对相关信息。
 	1.2.4 若向导拒绝核对或您发现明显不符合项，请立刻使用个人通讯设备拨打+1 (800) 882-8693报告您的情况，并在扫描二维码后前往传送区域等候，我们的工作人员将会在三十分钟内到达；等候期间请不要相信任何计时装置，包括瞭望塔上的计时装置和您自备的计时装置。
-> [!NOTE] 
+
 > NW：我猜这一段是针对%!#@~的，对吧？
 > S：不要写出真名，会导致人类心智受损的。
 > M：已经擦掉了，以及你猜的很对，确实是针对我的。
+
 1.3 个人准备
 	1.3.1 建议穿着颜色鲜艳的、舒适的长袖衣物，有必要的话，随身携带防晒霜；严禁穿着任何带有反光材质的衣物。
-> [!NOTE] 
+
 > NW：这条也是给B准备的？防晒霜和反光是因为S嘛？
 > W：是的。
 > S：反光衣物是针对瞭望塔的，他对于这种强光会有点……呃，敏感。
+
 	1.3.2 参观前12小时内严禁摄入任何含有乙醇或精神活性物质的食品或饮品。
-> [!NOTE] 
-> NW：我知道！火星猎人！
+
+> NW：我知道！M！
+
 1.4 医疗建议
 	1.4.1 若在传送或参观过程中感到短暂晕眩或认知模糊，请不必惊慌，这是空间跃迁时的正常生理反应。
 	1.4.2 如感到​​强烈恐惧、方向感彻底迷失、幻觉（尤其是听到不存在的低语、看到无法解释的扭曲光影）、身体组织异常感（变透明/变形/过热/湿冷粘稠）等​​情况，请立刻​向向导求助，向导会带您离开；若向导拒绝提供帮助，请参考1.2.4条款处理。
+
+> NW：认知模糊是M……嗯，恐惧肯定是B，方向感是S、幻觉的话好像都有点，身体组织异常肯定是G……
+> G：小家伙在玩侦探游戏呢？
+> A：一看就是正统蝙蝠崽子。
+
 1.5 联盟成员
 	1.5.1 正义联盟成员都是​​致力于保卫地球安全的伟大英雄，他们每一位都​​极其友善并欢迎您前往瞭望塔进行参观。
 	1.5.2 对于参观过程中遇到任何联盟成员，您可在保持礼貌的情况下与他们进行交谈，但请​​保持至少1.5米（5英尺）的社交距离​​。
@@ -62,6 +74,17 @@ B：至少后两条确实如此。
 	1.5.4 在任何情况下，若有任何联盟成员试图向您提供帮助，请不要接受并礼貌拒绝。
 	1.5.5 严禁尝试向联盟成员提及或展示本手册中的任何规则说明。
 	1.5.6 在任何情况下，严禁对联盟成员进行任何攻击行为或产生任何攻击意图。
+
+> NW：但这本手册的顾问不就是B嘛？
+> M：本来是没有这一条的，上一次有人拿着这本手册发表了一堆……不是很主流的言论，被瞭望塔判定为攻击行为了，差点没救下来。
+> NW：？
+> W：他是个邪教徒，我们后来发现这件事了。
+> NW：？
+> F：是信S的邪教徒，大概是说现在的太阳是伪日，S才是真太阳，他是过来膜拜真太阳的，这本手册是在阻拦真日降世他要把真相宣讲给全世界云云……
+> NW：……然后呢？
+> S：救下来之后我就把他带到太阳边上跟他谈了谈，现在他应该正在监狱里劳动改造。
+> NW：……
+
 1.6 物品与出入管理
 	1.6.1 严禁将任何瞭望塔内的任何物品带出瞭望塔；
 	1.6.2 若您在扫描二维码并进入传送区域后发现有物品遗落在瞭望塔内，请向向导求助，向导会为您寻回。
@@ -72,15 +95,20 @@ B：至少后两条确实如此。
 
 ## 2 条款S
 2.0 基础介绍
-
 	超人是正义联盟的核心成员，象征着温暖与希望。与超人接触时，请严格遵守以下规定，确保您的安全。
-> [!NOTE] “温暖与希望”下有一条下划线
-> W：当之无愧，超人
 2.1 视觉接触与防护
 	2.1.1 严禁长时间直视其身体任何部位超过5秒。短暂、礼貌的目光接触是允许且被鼓励的。
 	2.1.2 离开传送区域前，向导会向您发放一副特制眼镜。参观期间必须全程正确佩戴此眼镜，直至向导明确告知可以摘下为止。
 	2.1.3 若您忘记佩戴眼镜或眼镜意外损坏/遗失，请立即闭上双眼，并向向导求助，等待向导为您提供备用眼镜。
 	2.1.4 在得到新的眼镜前，严禁睁眼观察四周。
+
+> NW：哦，所以那些眼镜是干这个的？
+> B：是的，所以你下次不能再偷偷混在眼镜里面了。
+> G：但他做的很好啊！
+> B：你也不能伪装成眼镜。
+> S：绿灯，孩子不能这么带。
+> G：……
+
 2.2 距离与环境监测
 	2.2.1 请严格遵守1.5.2规定的至少1.5米（5英尺）社交距离。超人周围可能存在的生物力场在近距离接触时可能导致您产生不适。
 	2.2.2 时刻留意您所在区域的环境温度。在超人刚结束任务（如对抗自然灾害、深空救援）返回时，或情绪有明显波动（如表达强烈喜悦、关切或愤怒）时，其周围环境温度可能会显著升高（超过25°C/77°F但低于30℃/86℉），这是正常的，请不要担心。
