--- a/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知/","noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
 ---
 
 
@@ -16,47 +16,29 @@
 尊敬的游客，欢迎您参观位于近地轨道的正义联盟总部——瞭望塔！这里是英雄、光明与希望的象征，我们很荣幸能与您分享这份荣耀与奇迹。为了确保您拥有一次安全、愉快、难忘的体验，请仔细阅读并严格遵守以下参观指南。
 
 ## 1 通则
-1.1 许可与登记
-	1.1.1 若您获得参观瞭望塔的许可，您的邮箱将收到由“全球文化与技术创新组织 (Universal Technological Nexus)”发放的专属参观二维码，请妥善保存。
-	1.1.2 参观开始前及结束后，请在向导的指引下，于指定地点扫描二维码完成登记，方可进入/离开传送区域。
-1.2 向导
-	1.2.1 您的向导将由穿着统一制服的人类男性/女性担任，制服标准配色为：亮红色（255,0,0）外套、草绿色（0,255,0）上衣、宝蓝色（0,0,255）长裤，并携带一本亮黄色（255,255,0）的工作证（无论任何天气或季节）。
-	1.2.2 您将在邮件中收到向导的信息，在向导与您首次接触时，请确认以下信息：
-		- 其制服颜色与标准完全一致；
-		- 其所佩戴的工作证上的身份信息与邮件内容完全一致；
-		- 其本人样貌与邮件及工作证提供的证件照片可被明确识别为同一人。
-	1.2.3 向导会在您的游览过程中为您提供最好的服务与安全保障，若您在任何时候对向导身份、相貌或着装产生强烈疑虑，您可随时要求核对相关信息。
-	1.2.4 若向导拒绝核对或您发现明显不符合项，请立刻使用个人通讯设备拨打+1 (800) 882-8693报告您的情况，并在扫描二维码后前往传送区域等候，我们的工作人员将会在三十分钟内到达；等候期间请不要相信任何计时装置，包括瞭望塔上的计时装置和您自备的计时装置。
-1.3 个人准备
-	1.3.1 建议穿着颜色鲜艳的、舒适的长袖衣物，有必要的话，随身携带防晒霜；严禁穿着任何带有反光材质的衣物。
-	1.3.2 参观前12小时内严禁摄入任何含有乙醇或精神活性物质的食品或饮品。
-1.4 医疗建议
-	1.4.1 若在传送或参观过程中感到短暂晕眩或认知模糊，请不必惊慌，这是空间跃迁时的正常生理反应。
-	1.4.2 如感到​​强烈恐惧、方向感彻底迷失、幻觉（尤其是听到不存在的低语、看到无法解释的扭曲光影）、身体组织异常感（变透明/变形/过热/湿冷粘稠）等​​情况，请立刻​向向导求助，向导会带您离开；若向导拒绝提供帮助，请参考1.2.4条款处理。
-1.5 联盟成员
-	1.5.1 正义联盟成员都是​​致力于保卫地球安全的伟大英雄，他们每一位都​​极其友善并欢迎您前往瞭望塔进行参观。
-	1.5.2 对于参观过程中遇到任何联盟成员，您可在保持礼貌的情况下与他们进行交谈，但请​​保持至少1.5米（5英尺）的社交距离​​。
-	1.5.3 若您在交谈过程中感受到任何身体或精神上的不适，请立刻礼貌的表示身体不适，通常联盟成员将会自行离开；若联盟成员没有离开或试图向您提供帮助，请礼貌拒绝并立刻向向导求助，向导会带您离开。
-	1.5.4 在任何情况下，若有任何联盟成员试图向您提供帮助，请不要接受并礼貌拒绝。
-	1.5.5 严禁尝试向联盟成员提及或展示本手册中的任何规则说明。
-	1.5.6 在任何情况下，严禁对联盟成员进行任何攻击行为或产生任何攻击意图。
-1.6 物品与出入管理
-	1.6.1 严禁将任何瞭望塔内的任何物品带出瞭望塔；
-	1.6.2 若您在扫描二维码并进入传送区域后发现有物品遗落在瞭望塔内，请向向导求助，向导会为您寻回。
-	1.6.3 严禁在以下情况下进入瞭望塔：
-		- 未扫描二维码前；
-		- 二次扫描二维码后；
-		- 没有向导带领。
+1. 若您获得参观瞭望塔的许可，您的邮箱将收到由“全球技术网络 (Universal Technological Nexus)”发放的专属参观二维码，请妥善保存并随身携带。 在参观开始前及结束后，须于指定地点扫描二维码完成登记，方可进入或离开传送区域；一枚二维码能且仅能进行两次扫描，请不要重复使用。
+2. 建议穿着颜色鲜艳的、舒适的长袖衣物，有必要的话，可随身携带防晒霜；不建议穿着任何带有反光材质的衣物。为了您的安全着想，参观前24小时内严禁摄入任何含有乙醇或精神活性物质的食品或饮品。
+3. 若在传送或参观过程中感到短暂晕眩或认知模糊，请不必惊慌，这是空间跃迁时的正常生理反应；如在参观过程中感到​​强烈恐惧、失去方向感、看到幻觉或发现身体出现异常等​​情况，请立刻​通过您在传送区域领取的通讯器拨打+1 (800) 882-8693或短按三下电源键快速拨号将情况告知我们的工作人员，并在扫描二维码后前往传送区域等候，我们的工作人员将会在三十分钟内到达；等候期间请不要相信任何计时装置，包括瞭望塔上的计时装置和您自备的计时装置。
+4. 严禁将任何瞭望塔内的任何物品带出瞭望塔；严禁在未扫描二维码前及二次扫描二维码后进入瞭望塔。
+## 2 联盟成员
+1. 正义联盟成员都是​​致力于保卫地球安全的伟大英雄，他们每一位都​​极其友善并欢迎您前往瞭望塔进行参观。对于参观过程中遇到任何联盟成员，您可在保持礼貌的情况下与他们进行交谈，但请​​保持至少1.5米（5英尺）的社交距离​​；短暂、礼貌的目光接触是允许且被鼓励的，但请不要持续注视任何英雄的同一身体部位超过15秒，这并不礼貌。
+2. 严禁以任何理由主动触碰正义联盟成员们的身体、制服或其随身物品，即使某些物品看似遗落在地，也严禁捡拾或触碰，这可能会让他们感到冒犯。
+3. 若联盟成员主动以肢体接触的行为表示友好（如握手），在您无身体不适的前提下，可以进行短暂的、礼貌的肢体接触。
+4. 若您愿意，您可以向联盟成员赠予礼物，但对于成员赠予您的礼物请礼貌拒绝。
+5. 若您在与联盟成员交谈过程中感受到任何身体或精神上的不适，请立刻礼貌的表示自己身体不适，通常联盟成员将会自行离开；若联盟成员没有离开或试图向您试图向您提供帮助，请礼貌拒绝并参照1.3条处理。
+
+## 3 区域
+1. 瞭望塔的绝大多数公共区域对游客开放。
 
 ## 2 条款S
 2.0 基础介绍
 	超人是正义联盟的核心成员，象征着力量与希望。与超人接触时，请严格遵守以下规定，确保您的安全。
-2.1 视觉接触与防护
+2.1 观察与防护
 	2.1.1 严禁长时间直视其身体任何部位超过5秒。短暂、礼貌的目光接触是允许且被鼓励的。
 	2.1.2 离开传送区域前，向导会向您发放一副特制眼镜。参观期间必须全程正确佩戴此眼镜，直至向导明确告知可以摘下为止。
 	2.1.3 若您忘记佩戴眼镜或眼镜意外损坏/遗失，请立即闭上双眼，并向向导求助，等待向导为您提供备用眼镜。
 	2.1.4 在得到新的眼镜前，严禁睁眼观察四周。
-2.2 距离与环境监测
+2.2 环境监测
 	2.2.1 请严格遵守1.5.2规定的至少1.5米（5英尺）社交距离。超人周围可能存在的生物力场在近距离接触时可能导致您产生不适。
 	2.2.2 时刻留意您所在区域的环境温度。在超人刚结束任务（如对抗自然灾害、深空救援）返回时，或情绪有明显波动（如表达强烈喜悦、关切或愤怒）时，其周围环境温度可能会显著升高（超过25°C/77°F但低于30℃/86℉），这是正常的，请不要担心。
 	2.2.3 若您感觉温度异常升高，请立刻缓慢地、平稳地后退至距离他至少5米（16英尺） 以外或前往另一个房间并关门（若距离不够）；若您愿意，您可以将该现象使用礼貌的语言告知超人。
@@ -78,6 +60,45 @@
 	2.5.2 若上述症状持续超过144小时，或出现更严重的幻觉或异常感觉（如持续性看到不明强光源或感觉身体内部持续发热），请立即拨打+1 (800) 882-8693说明您的基本信息和症状，我们将会派出专人对您进行治疗。
 
 ## 3 条款B
+3.0 基础介绍
+	蝙蝠侠是正义联盟的战术核心。在与蝙蝠侠接触时，请严格遵守以下规定，确保您的安全。
+3.1 观察与防护
+    3.1.1 严禁在任何时间任何、地点主动寻找蝙蝠侠，或产生强烈的、想要主动寻找蝙蝠侠的欲望。若您非常想要见蝙蝠侠一面，请告知向导，向导会替您寻找。
+    3.1.2 在您游览过程中，向导会确保您所在区域始终照明充足（亮度不低于300 lux）。若您发现某区域照明突然变得昏暗或不稳定，请立刻移开视线并告知向导。这种异常通常都是无害的。
+    3.1.3 参观过程中绝对禁止使用任何形式的强光设备（如闪光灯、强光手电）照射蝙蝠侠或其附近的阴影区域。 这被视为极其严重的挑衅行为。
+    3.1.4 若您无意中感觉与蝙蝠侠的“目光”有短暂接触，或感到其阴影似乎“动了一下”，请**立刻移开视线，看向明亮、色彩鲜艳的物体（如向导的制服或工作证）**，并深呼吸数次。通常不适感会迅速消退。若恐慌感持续增强，请参考3.4.1条款。
+3.2 空间导航与移动
+    3.2.1 **进入瞭望塔核心区域后，向导会向您发放一个“蝙蝠指南针”。此设备是您在瞭望塔内安全通行的关键，必须全程妥善保管并开启。**
+        3.2.1.1 指南针屏幕将显示简洁的箭头指示通往下一个参观点的最短安全路径。**请严格遵循箭头指示行走，严禁偏离路径或探索未标注区域。**
+        3.2.1.2 若指南针屏幕出现剧烈闪烁、雪花、或指示箭头疯狂旋转，请**立刻停在原地，闭上眼睛**，并大声呼唤向导。在向导确认安全前，严禁移动或睁眼。
+        3.2.1.3 指南针由特殊材料制成，**严禁尝试拆卸、研究或对其拍照。** 参观结束后需完整归还给向导。
+    3.2.2 行走时，请时刻留意您的前方和侧方视野盲区（如拐角、设备后方、打开的柜门内侧）。**在接近此类区域时，请刻意放慢脚步，并发出适度的声响（如轻声咳嗽、脚步声稍重）。** 这有助于避免意外碰撞。
+    3.2.3 若您发现自己在重复行走相同的区域（例如，连续三次经过同一扇标有“Zeta Tube 03”的门），或感觉走廊的长度/方向发生了无法解释的变化，**请立刻停下，检查您的蝙蝠指南针。**
+        3.2.3.1 若指南针指示清晰，请**严格按照其新指示的方向行走，即使它指向一堵墙或一个看似封闭的空间（在接近时，通道通常会显现）**。
+        3.2.3.2 若指南针失效（见3.2.1.2），请按该条款处理。
+        3.2.3.3 **绝对禁止尝试自行寻找出路或质疑空间合理性。** 耐心等待向导处理。
+3.3 接触与物品
+    3.3.1 **绝对禁止触碰蝙蝠侠的身体、制服或任何其可能携带的物品（如飞镖、绳索、小型电子设备）。** 即使物品看似遗落在地，也严禁捡拾或触碰。
+    3.3.2 **严禁在蝙蝠侠可能停留的区域（即使他当时不在场）随意触碰设备、操作台面或倚靠墙壁。** 这些区域可能残留其存在的影响。
+    3.3.3 若蝙蝠侠主动递交给您物品（可能性极低），**请保持双手自然下垂，目视前方地面，并用清晰但平静的语气说：“感谢您，蝙蝠侠先生，但我不能接受。”** 向导会代为处理该物品。
+    3.3.4 若您不慎接触到蝙蝠侠接触过的表面或物品（例如，在向导指引下使用了他刚用过的操作台），请**立刻告知向导**。向导会提供清洁湿巾并进行简短的心理安抚程序。
+3.4 特殊情况处理
+    3.4.1 **若您感到莫名且强烈的恐惧感、被害妄想（如感觉被监视、被跟踪、即将受到攻击，且无实际依据）、或对黑暗产生急性、无法控制的恐慌，请立刻：**
+        - **停止移动。**
+        - **闭上眼睛。**
+        - **大声、清晰地连续呼喊向导的名字（如“向导史密斯！我需要帮助！”）。**
+        - 向导会迅速赶到您身边并提供帮助（通常是引导您前往明亮、开放的区域并进行认知校准）。**在向导明确指示前，严禁睁眼或自行移动。**
+    3.4.2 若您目睹蝙蝠侠似乎“融入”阴影或墙壁，或在您视野边缘“消失”，**请勿表现出惊讶或试图寻找。** 继续您当前的行动，或遵循蝙蝠指南针/向导的指示。
+    3.4.3 若您感觉身体某部分（通常是腿部）突然被冰冷、粘稠的“黑暗”短暂包裹或拉扯，随后又被释放，**请保持镇定，不要尖叫或剧烈挣扎。** 这通常是无害的短暂现象。检查身体无碍后，继续行程。若感觉不适，告知向导。
+    3.4.4 **在任何情况下，严禁对蝙蝠侠做出以下行为：**
+        - 询问其真实身份或起源；
+        - 质疑其“是否真的存在”或“是否只是个传说”；
+        - 模仿其声音或标志性动作（如压低嗓音说话、展开双臂模仿披风）；
+        - 声称“自己不怕他”或试图证明这一点；
+        - 或其他任何可能被解读为挑衅、窥探或试图“解构”其存在的行为。
+3.5 参观后续
+    3.5.1 参观结束后，若您短暂地对黑暗环境感到轻微不安或做几个与阴影、迷路相关的噩梦，这是正常的心理调节过程，通常在几天内会消失。
+    3.5.2 若您出现**持续性的强烈恐惧（尤其是对特定形状的阴影、空旷的走廊、角落）、被害妄想、空间方向感长期混乱（例如在家中频繁迷路），或反复做内容高度一致且令人极度不适的噩梦**，请**立即**拨打+1 (800) 882-8693报告您的基本信息和症状。我们的认知危害处理小组将为您提供专业干预。
 
 ## 4 条款W
 
